Published multiple files

--- a/src/site/notes/Calendrier/Semaines/2024-15.md
+++ b/src/site/notes/Calendrier/Semaines/2024-15.md
@@ -1,92 +1,58 @@
 ---
-{"dg-publish":true,"permalink":"/calendrier/semaines/2024-15/","title":"2024-15","tags":[null]}
+{"dg-publish":true,"permalink":"/calendrier/semaines/2024-15/","title":"Cette Semaine","tags":[null]}
 ---
 
 
-# 2024-15
+# Cette Semaine
 
-## Cette Semaine
-
-1. Email
-2. Evènements
-3. Notes
-4. Tasks
-
-> [!check] To do this week
-> 
-> ```tasks
-> due 2024-04-08 2024-04-14
-> group by due
-> short mode
-> show urgency
-> ```
-
-## Podcast
-
-### Introduction
+## Introduction
 
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
-### Segment 1 & 2 : Cinéma & Séries TV
+# Segment 1 & 2 : Cinéma & Séries TV
 
-#### 🍿 Cette Semaine, J'ai Vu
+## 🍿 Cette Semaine, J'ai Vu
 
-##### Films
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### Séries TV
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                             | rating | review                                                                                                                  |
+| -------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai vu/DataOps - Mais qu’est-ce que cest\|DataOps - Mais qu’est-ce que cest]]                               | \-     | Une vidéo vraiment sympa pour une explication simple et rapide de la DataOps                                            |
+| [[Sources/Ce que j'ai vu/OBSIDIAN PRÉSENTATION ∞ Alternative à Powerpoint\|OBSIDIAN PRÉSENTATION ∞ Alternative à Powerpoint]] | \-     | Comment faire des slides sur Obsidian une vidéo très sympa pour vous présenter cette fonctionnalité de base du logiciel |
 
 { .block-language-dataview}
 
-##### YouTube
+# Segment 3 : Culture Littéraire & Articles
 
-| File | rating | review |
-| ---- | ------ | ------ |
+## 📚 Cette Semaine, J'ai Lu
 
-{ .block-language-dataview}
-
-### Segment 3 : Culture Littéraire & Articles
-
-#### 📚 Cette Semaine, J'ai Lu
-
-##### Livres
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                               | rating | review                                                                                                                                                                                                                                                                                                                                                                                                  |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai lu/60 questions étonnantes sur le paranormal et les réponses qu'y apporte la science\|60 questions étonnantes sur le paranormal et les réponses qu'y apporte la science]] | 🟡     | Je m'attendais à une réfutation globale du paranormal, mais c'est plus mitigé que cela, le livre donne à penser que l'auteur serait prête a admettre le paranormal si les expériences menées sont bien réalisées et documentées. Il y a des points vraiment intréessant et d'autres assez amusant. Au final c'est quand même un peu rapide et un peu court mais c'est aussi expliqué dans le Nota Bene. |
+| [[Sources/Ce que j'ai lu/Harry Dickson tome 09\|Harry Dickson tome 09]]                                                                                                                         | 🟡     | Du plaisir à le lire même si on retrouve les mêmes trames et que je trouve les nouvelles moins travaillées que d'autres                                                                                                                                                                                                                                                                                 |
+| [[Sources/Ce que j'ai lu/GitLab - Comment bien gérer ses projets\|GitLab - Comment bien gérer ses projets]]                                                                                     | \-     | Doc sympa sur l'explication des bonnes pratiques de gestion des projets avec un gestionnaire de source, ici GitLab                                                                                                                                                                                                                                                                                      |
 
 { .block-language-dataview}
 
-##### Articles
+# Segment 4 : Podcasts Et Musiques
 
-| File | rating | review |
-| ---- | ------ | ------ |
+## 🎧 Cette Semaine, J'ai Écouté
+
+| File                                                                                                                                                                                                                                 | rating | review                                                                                                                                                                                                                                                                       |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai écouté/Event Horizon - Orbital\|Event Horizon - Orbital]]                                                                                                                                                   | \-     | \-                                                                                                                                                                                                                                                                           |
+| [[Sources/Ce que j'ai écouté/Je déteste les podcasts - PodRennes 11, le retour de la bonnette tueuse - Podcast Addict\|Je déteste les podcasts - PodRennes 11, le retour de la bonnette tueuse - Podcast Addict]]                 | \-     | J'ai pas compris ce que j'ai écouté                                                                                                                                                                                                                                          |
+| [[Sources/Ce que j'ai écouté/Lair de rien - 014 - Des petits bruits - Podcast Addict\|Lair de rien - 014 - Des petits bruits - Podcast Addict]]                                                                                   | \-     | Toujours très content d'écouter Eiffair, cela me fait décourvir à chaque fois de nouvelles choses.                                                                                                                                                                           |
+| [[Sources/Ce que j'ai écouté/Michael Kamen & Orbital - Lewis & Clark\|Michael Kamen & Orbital - Lewis & Clark]]                                                                                                                   | \-     | \-                                                                                                                                                                                                                                                                           |
+| [[Sources/Ce que j'ai écouté/Quête Latérale - Episode 28  Gen IA, la loi  game-design IRL, lamour et lamitié - Podcast Addict\|Quête Latérale - Episode 28  Gen IA, la loi  game-design IRL, lamour et lamitié - Podcast Addict]] | \-     | Très sympa comme épisode, une idée intéressante sur le fait que le droit soit les règles du jeu de la vraie vie. Et aussi pas mal de réflexion autour des émotions ressenties dans et grâce aux jeux vidéo.                                                                  |
+| [[Sources/Ce que j'ai écouté/Tech Café - Claude au top  - Podcast Addict\|Tech Café - Claude au top  - Podcast Addict]]                                                                                                           | \-     | Episode très bien sur comment comprendre la mesure et les classements des chatbot et plein de nom de modèle à tester du coup.                                                                                                                                                |
+| [[Sources/Ce que j'ai écouté/Tech Café - Mon hobby, c’est la lobotomie - Podcast Addict\|Tech Café - Mon hobby, c’est la lobotomie - Podcast Addict]]                                                                             | \-     | Des avancées dans la réparation des matériels et c'est bien, Les piques envers Microsoft sur Minecraft, c'est drôle.  Impressionné par les études sur les LLM et la façon de tronquer en gardant le même niveau de qualité De la colère sur ce que fait Broadcom avec VMWare |
+| [[Sources/Ce que j'ai écouté/Tech Café - Podcasthon  Emmaüs Connect - Podcast Addict\|Tech Café - Podcasthon  Emmaüs Connect - Podcast Addict]]                                                                                   | \-     | Une découverte super intéressante de l'association Emmaus Connect et de ses buts et ambitions.                                                                                                                                                                               |
 
 { .block-language-dataview}
 
-### Segment 4 : Podcasts Et Musiques
+# Segment 5 : Projets & Apps
 
-#### 🎧 Cette Semaine, J'ai Écouté
-
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-### Segment 5 : Projets & Apps
-
-#### 💡 Cette Semaine, J'ai Travaillé Sur
-
-##### Sources
+## 💡 Cette Semaine, J'ai Travaillé Sur
 
 | File                                                                                                                                               | date       | status |
 | -------------------------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
@@ -95,112 +61,25 @@
 
 { .block-language-dataview}
 
-#### 🖥 Cette Semaine, J'ai Testé
+## 🖥 Cette Semaine, J'ai testé
 
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-### Segment 6 : Jeux
-
-#### 🎮 Cette Semaine, J'ai Joué
-
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                              | rating | review                                                                                                                                                                                                            |
+| --------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai testé/Suno\|Suno]]                                                                                       | \-     | Très très drole mais très difficile d'obtenir un son dans le genre souhaité                                                                                                                                       |
+| [[Sources/Ce que j'ai testé/Ugly Avatar\|Ugly Avatar]]                                                                         | \-     | Une application inutile donc forcément indispensable : un générateur d'avatar moche.                                                                                                                              |
+| [[Sources/Ce que j'ai testé/Beeper — All your chats in one app. Yes, really\|Beeper — All your chats in one app. Yes, really]] | \-     | Je teste cette application qui doit normalement rassemblé toute les messageries instannées. Pour l'instant c'est pas mal mais j'ai quand même quelques appréhension à me connecter avec à toutes mes messageries. |
 
 { .block-language-dataview}
 
-### Segment 7 : Interaction Avec Les Auditeurs
+# Segment 6 : Jeux
 
-### Conclusion
+## 🎮 Cette Semaine, J'ai Joué
 
-- Récapitulation des temps forts de l'épisode.
-- Invitation à s'abonner au podcast et à le noter.
-- Annonce du thème du prochain épisode (si pertinent).
-- Remerciements aux auditeurs pour leur fidélité.
-
-# Description De L'épisode
-
-```prompt
-- Create a catchy French post for Instagram on the new episode of the podcast "La semaine de Valkann" with this note
-```
-
-# Sommaire De L'épisode
-
----
-
-🍿 Cette semaine, j'ai vu :
-
+| File                                                                                                                                                          | rating | review |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------ |
+| [[Sources/Ce à quoi j'ai joué/Alien Invasion RPG Idle Space – Applications sur Google Play\|Alien Invasion RPG Idle Space – Applications sur Google Play]] | \-     | \-     |
+| [[Sources/Ce à quoi j'ai joué/Rush Royale\|Rush Royale]]                                                                                                   | \-     | \-     |
 
 { .block-language-dataview}
 
----
 
-📚 Cette semaine, j'ai lu :
-
-
-{ .block-language-dataview}
-
----
-
-🎧 Cette semaine, j'ai écouté :
-
-
-{ .block-language-dataview}
-
----
-
-💡 Cette semaine, j'ai travaillé sur :
-
-- [[Projects/JDR Academy/Radio Campus Academy\|Radio Campus Academy]]
-
-{ .block-language-dataview}
-
----
-
-🖥 Cette semaine, j'ai testé:
-
-
-{ .block-language-dataview}
-
----
-
-🎮 Cette semaine, j'ai joué :
-
-
-{ .block-language-dataview}
-
-# Instagram
-
-```Texte d'image
-
-Logo du podcast la semaine de Valkann. 
-Plusieurs éléments de pop culture qui surgissent d'un livre. On y trouve des manettes de console, des comics, des dés, du pop-corn et des lunettes 3D a l'ancienne, des livres de jdr un vinyle et un casque.
-
-Le livre est tenu par une main.
-```
-
-> [!NOTE] Texte
-
-```prompt
-- Suggest a French title for the episode based on its content 
-```
-
-> [!NOTE] Titre
-
-## 🏁 Les 10 plus Vieilles Choses Que Je Dois Finir
-
-### Sources
-
-| File                                                                                                                                                                                                                                             | Type | week | updated |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---- | ------- |
-| [[Sources/Ce que j'ai lu/Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica\|Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica]] | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/Les Secrets de New York\|Les Secrets de New York]]                                                                                                                                                                   | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/La seconde vie de Marion du Faouët\|La seconde vie de Marion du Faouët]]                                                                                                                                             | \-   | \-   | \-      |
-
-{ .block-language-dataview}
