--- a/src/site/notes/Calendrier/Semaines/2024-16.md
+++ b/src/site/notes/Calendrier/Semaines/2024-16.md
@@ -1,92 +1,59 @@
 ---
-{"dg-publish":true,"permalink":"/calendrier/semaines/2024-16/","title":"2024-16","tags":[null]}
+{"dg-publish":true,"permalink":"/calendrier/semaines/2024-16/","title":"Cette semaine","tags":[null]}
 ---
 
 
-# 2024-16
+# Cette semaine
 
-## Cette Semaine
-
-1. Email
-2. Evènements
-3. Notes
-4. Tasks
-
-> [!check] To do this week
-> 
-> ```tasks
-> due 2024-04-15 2024-04-21
-> group by due
-> short mode
-> show urgency
-> ```
-
-## Podcast
-
-### Introduction
+## Introduction
 
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
-### Segment 1 & 2 : Cinéma & Séries TV
+## Segment 1 & 2 : Cinéma & Séries TV
 
-#### 🍿 Cette Semaine, J'ai Vu
+### 🍿 Cette Semaine, J'ai Vu
 
-##### Films
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### Séries TV
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                             | rating | review                                                                                                                                                                                                     |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai vu/Part 1 Blade Engine Tutorials - Creating the first scene\|Part 1 Blade Engine Tutorials - Creating the first scene]]                                                 | 🟢     | Une vidéo sans son sur la présentation d'un moteur de création de jeu d'aventure de type point & clic qui a l'air assez sympa.                                                                             |
+| [[Sources/Ce que j'ai vu/20 Adventure Game Studio (AGS) Games in 5 Minutes\|20 Adventure Game Studio (AGS) Games in 5 Minutes]]                                                               | 🟡     | La vidéo n'apporte pas grand chose hormis les liste de jeu mais on ne sait pas vraiment qui est qui. Donc a vous de chercher si vous voyez une image qui vous parle ou un gameplay que vous voulez tester. |
+| [[Sources/Ce que j'ai vu/Adventure Game Studio Tutorial Episode 1, Part 1 Basics, Backgrounds and Sprites\|Adventure Game Studio Tutorial Episode 1, Part 1 Basics, Backgrounds and Sprites]] | \-     | \-                                                                                                                                                                                                         |
+| [[Sources/Ce que j'ai vu/Adventure Game Studio Tutorial Episode 1, Part 2 Inventory and Hotspots\|Adventure Game Studio Tutorial Episode 1, Part 2 Inventory and Hotspots]]                   | \-     | Tutoriels sur Adventure Game Studio plutôt pas mal plutôt simple à prendre en main.                                                                                                                        |
+| [[Sources/Ce que j'ai vu/AI vs. AI in 100m Dash (deep reinforcement learning)\|AI vs. AI in 100m Dash (deep reinforcement learning)]]                                                         | \-     | Une vidéo assez fun mais je ne suis pas sûr qu'elle ait vraiment d'autres intérêts                                                                                                                         |
+| [[Sources/Ce que j'ai vu/How To Pixel Art In 10 Minutes  Pixel Art Tutorial\|How To Pixel Art In 10 Minutes  Pixel Art Tutorial]]                                                             | \-     | Pas mal d'astuces sympa pour commencer le pixel art.                                                                                                                                                       |
 
 { .block-language-dataview}
 
-##### YouTube
+## Segment 3 : Culture Littéraire & Articles
 
-| File | rating | review |
-| ---- | ------ | ------ |
+### 📚 Cette Semaine, J'ai Lu
 
-{ .block-language-dataview}
-
-### Segment 3 : Culture Littéraire & Articles
-
-#### 📚 Cette Semaine, J'ai Lu
-
-##### Livres
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                                   | rating | review                                                                                                                                                                                                                  |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 284\|Dense Discovery – Issue 284]]                                                                                                                                                 | 🟡     | Un numéro qui m'a moins parlé, moins emballé cette semaine. Le concept de Pub Choir a l'air sympa mais bon.                                                                                                             |
+| [[Sources/Ce que j'ai lu/Workshop Report Forging Alliances in EdTech - A Pathway to Trust and Evidence — EdTech Strategy Lab\|Workshop Report Forging Alliances in EdTech - A Pathway to Trust and Evidence — EdTech Strategy Lab]] | 🟡     | Un article un peu bateau sur une rencontre récente entre les acteurs de education numérique et certain groupe et legislateur pur essayer de faire parler tout le monde. L'idée est louable, l'article est un peu léger. |
 
 { .block-language-dataview}
 
-##### Articles
+## Segment 4 : Podcasts Et Musiques
 
-| File | rating | review |
-| ---- | ------ | ------ |
+### 🎧 Cette Semaine, J'ai Écouté
 
-{ .block-language-dataview}
-
-### Segment 4 : Podcasts Et Musiques
-
-#### 🎧 Cette Semaine, J'ai Écouté
-
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                                                                                                                                                                                         | rating | review                                                                                                                                                                                                                                                          |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai écouté/Decideo - Data Science, Big Data, Intelligence Augmentée - 4.9 Votre plan de métro des compétences, avec Jean-Guillaume Pelletier de Mindmatcher - Podcast Addict\|Decideo - Data Science, Big Data, Intelligence Augmentée - 4.9 Votre plan de métro des compétences, avec Jean-Guillaume Pelletier de Mindmatcher - Podcast Addict]]                       | 🟢     | J'ai bien aimé cette épisode, même si je ne sais pas pour quel raison j'ai un peu du mal a comprendre ce qu'il fait et dans quel contexte, je trouve que son idée de visualisation de compétence sous forme e ligen de métro suivant les métiers visés est top. |
+| [[Sources/Ce que j'ai écouté/Génération Do It Yourself - 371 - Stanislas de Bentzmann - Devoteam - Perdre 30% de ses effectifs, rester coté en Bourse 22 ans et faire 1,5 milliard de CA - Podcast Addict\|Génération Do It Yourself - 371 - Stanislas de Bentzmann - Devoteam - Perdre 30% de ses effectifs, rester coté en Bourse 22 ans et faire 1,5 milliard de CA - Podcast Addict]] | 🟢     | Alors je ne suis pas du tout raccord avec ce monsieur mais je dois reconnaitre qu'il a des idées et des expériences autour de l'entreprise du numérique qui sont intéressante.                                                                                  |
+| [[Sources/Ce que j'ai écouté/Tech Café - Business models et modèles électriques - Podcast Addict\|Tech Café - Business models et modèles électriques - Podcast Addict]]                                                                                                                                                                                                                   | 🟢     | Une multitude d'info diverse dans cet épisode, on y voit que pas mal de boite recherche de nouvelle piste et de nouveaux business modele ou en abandonne des anciens.                                                                                           |
+| [[Sources/Ce que j'ai écouté/Tech Café - Hatsune Miku  que lui reste-t-il  - Podcast Addict (1)\|Tech Café - Hatsune Miku  que lui reste-t-il  - Podcast Addict (1)]]                                                                                                                                                                                                                     | 🟢     | Super épisode : de nouveaux modèle LLM que j'ai envie de tester, un dossier musicale étonant et pas mal de news jeux vidéo.                                                                                                                                     |
+| [[Sources/Ce que j'ai écouté/Tech Café - Pizzas boostées à lIA - Podcast Addict\|Tech Café - Pizzas boostées à lIA - Podcast Addict]]                                                                                                                                                                                                                                                     | 🟢     | L'IA dans la pizza effectivement est-ce qu'on n'arrive pas au bout de la hype de départ de l'ia ? En tout cas je découvre que certain sont fan de Manga et ont un petit côté Otaku qui était bien caché                                                         |
+| [[Sources/Ce que j'ai écouté/Solopreneur  créer et développer un business au service de ta vie - Ego et confiance pour entreprendre - Podcast Addict\|Solopreneur  créer et développer un business au service de ta vie - Ego et confiance pour entreprendre - Podcast Addict]]                                                                                                           | 🟡     | Je trouve e moins en moins pertinent ce podcast pour ma pratique et je pense que je ne vais pas continuer à le suivre.                                                                                                                                          |
 
 { .block-language-dataview}
 
-### Segment 5 : Projets & Apps
+## Segment 5 : Projets & Apps
 
-#### 💡 Cette Semaine, J'ai Travaillé Sur
-
-##### Sources
+### 💡 Cette Semaine, J'ai Travaillé Sur
 
 | File                                                                                                                                                               | date       | status |
 | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------- | ------ |
@@ -94,112 +61,21 @@
 
 { .block-language-dataview}
 
-#### 🖥 Cette Semaine, J'ai Testé
-
-##### Sources
+### 🖥 Cette Semaine, J'ai testé
 
 | File | rating | review |
 | ---- | ------ | ------ |
 
 { .block-language-dataview}
 
-### Segment 6 : Jeux
+## Segment 6 : Jeux
 
-#### 🎮 Cette Semaine, J'ai Joué
+### 🎮 Cette Semaine, J'ai Joué
 
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-### Segment 7 : Interaction Avec Les Auditeurs
-
-### Conclusion
-
-- Récapitulation des temps forts de l'épisode.
-- Invitation à s'abonner au podcast et à le noter.
-- Annonce du thème du prochain épisode (si pertinent).
-- Remerciements aux auditeurs pour leur fidélité.
-
-# Description De L'épisode
-
-```prompt
-- Create a catchy French post for Instagram on the new episode of the podcast "La semaine de Valkann" with this note
-```
-
-# Sommaire De L'épisode
-
----
-
-🍿 Cette semaine, j'ai vu :
-
+| File                                                                                    | rating | review                                                                     |
+| --------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------- |
+| [[Sources/Ce à quoi j'ai joué/Poirmento by Mike Sheldon\|Poirmento by Mike Sheldon]] | 🟢     | Un petit jeu très sympa dansl'esprit agatha Cristie avec pas mal d'humour. |
 
 { .block-language-dataview}
 
----
 
-📚 Cette semaine, j'ai lu :
-
-
-{ .block-language-dataview}
-
----
-
-🎧 Cette semaine, j'ai écouté :
-
-
-{ .block-language-dataview}
-
----
-
-💡 Cette semaine, j'ai travaillé sur :
-
-- 2024 - Semaine 16 - De l'importance de prendre le temps
-
-{ .block-language-dataview}
-
----
-
-🖥 Cette semaine, j'ai testé:
-
-
-{ .block-language-dataview}
-
----
-
-🎮 Cette semaine, j'ai joué :
-
-
-{ .block-language-dataview}
-
-# Instagram
-
-```Texte d'image
-
-Logo du podcast la semaine de Valkann. 
-Plusieurs éléments de pop culture qui surgissent d'un livre. On y trouve des manettes de console, des comics, des dés, du pop-corn et des lunettes 3D a l'ancienne, des livres de jdr un vinyle et un casque.
-
-Le livre est tenu par une main.
-```
-
-> [!NOTE] Texte
-
-```prompt
-- Suggest a French title for the episode based on its content 
-```
-
-> [!NOTE] Titre
-
-## 🏁 Les 10 plus Vieilles Choses Que Je Dois Finir
-
-### Sources
-
-| File                                                                                                                                                                                                                                             | Type | week | updated |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---- | ------- |
-| [[Sources/Ce que j'ai lu/Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica\|Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica]] | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/Les Secrets de New York\|Les Secrets de New York]]                                                                                                                                                                   | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/La seconde vie de Marion du Faouët\|La seconde vie de Marion du Faouët]]                                                                                                                                             | \-   | \-   | \-      |
-
-{ .block-language-dataview}
