--- a/src/site/notes/Calendrier/Semaines/2024-17.md
+++ b/src/site/notes/Calendrier/Semaines/2024-17.md
@@ -5,88 +5,58 @@
 
 # 2024-17
 
-## Cette Semaine
+# Cette semaine
 
-1. Email
-2. Evènements
-3. Notes
-4. Tasks
-
-> [!check] To do this week
-> 
-> ```tasks
-> due 2024-04-22 2024-04-28
-> group by due
-> short mode
-> show urgency
-> ```
-
-## Podcast
-
-### Introduction
+## Introduction
 
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
-### Segment 1 & 2 : Cinéma & Séries TV
+## Segment 1 & 2 : Cinéma & Séries TV
 
-#### 🍿 Cette Semaine, J'ai Vu
+### 🍿 Cette Semaine, J'ai Vu
 
-##### Films
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### Séries TV
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                                   | rating | review                                                                                                                                  |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai vu/Cette théorie du complot est vraie\|Cette théorie du complot est vraie]]                                                                                                                                   | 🟢     | Une vidéo impressionnante sur les focntionnement des constructeur d'imprimante et de cartouche.                                         |
+| [[Sources/Ce que j'ai vu/Start using the flipside of your markdown notes Powerful new Excalidraw-Obsidian features - v2.0.26\|Start using the flipside of your markdown notes Powerful new Excalidraw-Obsidian features - v2.0.26]] | 🟢     | Super vidéo sur l'avancée du plugin excalidraw dans l'idée de faire un PKM visuelle avec des notes en deux versions : dessins + Textes. |
+| [[Sources/Ce que j'ai vu/Taking visual notes with Obsidian Excalidraw\|Taking visual notes with Obsidian Excalidraw]]                                                                                                               | 🟢     | Très content de voir que d'autres personnes s'intéressent au Visual PKM                                                                 |
 
 { .block-language-dataview}
 
-##### YouTube
+## Segment 3 : Culture Littéraire & Articles
 
-| File | rating | review |
-| ---- | ------ | ------ |
+### 📚 Cette Semaine, J'ai Lu
 
-{ .block-language-dataview}
-
-### Segment 3 : Culture Littéraire & Articles
-
-#### 📚 Cette Semaine, J'ai Lu
-
-##### Livres
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                   | rating | review |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ------ |
+| [[Sources/Ce que j'ai lu/Le Club des amateurs de romans policiers - Ils étaient sept\|Le Club des amateurs de romans policiers - Ils étaient sept]] | \-     | \-     |
 
 { .block-language-dataview}
 
-##### Articles
+## Segment 4 : Podcasts Et Musiques
 
-| File | rating | review |
-| ---- | ------ | ------ |
+### 🎧 Cette Semaine, J'ai Écouté
+
+| File                                                                                                                                                                                                                                                                                 | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai écouté/Carbone 14, le magazine de larchéologie - Actualités d’avant le déluge - Podcast Addict\|Carbone 14, le magazine de larchéologie - Actualités d’avant le déluge - Podcast Addict]]                                                                   | 🟢     | Une émission intéressnate sur els sites de fouilels préhistorique français.                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P1.EP3_Toxique - Podcast Addict\|Late Night Stories - S1.P1.EP3_Toxique - Podcast Addict]]                                                                                                                                   | 🟢     | Enfin repris l'écoute et terminé Toxique, histoire sombre, triste, mais avec une pointe d'espoir. En tout cas c'est bien amené.                                                                                                                                                                                                                                                                                                                                                                                              |
+| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P2.EP0_Le-lutin-amoureux_Présentation - Podcast Addict\|Late Night Stories - S1.P2.EP0_Le-lutin-amoureux_Présentation - Podcast Addict]]                                                                                     | 🟢     | Une histoire très sympa, proche du conte ancien et qui nous amène un twist assez sombre.                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P3.EP0_Entre-feu-et-glace_Présentation - Podcast Addict\|Late Night Stories - S1.P3.EP0_Entre-feu-et-glace_Présentation - Podcast Addict]]                                                                                   | 🟢     | Un background de personnage de jdr mis en fiction sonore, c'est une première pour moi, c'est bien fait et l'univers est intéressant.                                                                                                                                                                                                                                                                                                                                                                                         |
+| [[Sources/Ce que j'ai écouté/Mauvais genres - Dragclown Affairs, une exposition qui fait fusionner l’univers des clowns et des drags - Podcast Addict\|Mauvais genres - Dragclown Affairs, une exposition qui fait fusionner l’univers des clowns et des drags - Podcast Addict]] | 🟢     | Un phénomène que je ne connaissais pas et qui doit être intéressant de voir.                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| [[Sources/Ce que j'ai écouté/Tech Café - Airchat  parlez. Point. - Podcast Addict\|Tech Café - Airchat  parlez. Point. - Podcast Addict]]                                                                                                                                         | 🟢     | Toujours un trèc bon épisode, un peu flipant car on arrive de plus en plus dans les dystopie guerrière et les guerres cyberpunk des oeuvres de fictions.                                                                                                                                                                                                                                                                                                                                                                     |
+| [[Sources/Ce que j'ai écouté/Tech Café - Luxo Jr. - Podcast Addict\|Tech Café - Luxo Jr. - Podcast Addict]]                                                                                                                                                                       | 🟢     | 2pisode différent mais très sympa, j'aime bien les intervention de POD, et je suis triste du constat que les gens maintent ne connaitrons pas un web non disfnctionnel complètement polué par des faux site pour amener du trafic et des pub. Une idée donné pour améliorer ça : faire des vidéos qui sont plus facilement indexable que par le passé. QU'est ce que vous en pensez ? la semaine de Valkann et les articles en vidéos ? Et pour les mettre ou ? Youtube ? ça ne règle pas le souci que google soit derrière… |
+| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P2.EP3_Le-lutin-amoureux - Podcast Addict\|Late Night Stories - S1.P2.EP3_Le-lutin-amoureux - Podcast Addict]]                                                                                                               | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P3.EP2_Entre-feu-et-glace - Podcast Addict\|Late Night Stories - S1.P3.EP2_Entre-feu-et-glace - Podcast Addict]]                                                                                                             | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P3.EP3_Entre-feu-et-glace - Podcast Addict\|Late Night Stories - S1.P3.EP3_Entre-feu-et-glace - Podcast Addict]]                                                                                                             | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+| [[Sources/Ce que j'ai écouté/Les Échos d&39;Arkham - La boite de base de l&39;Appel de Cthulhu de EDGE - Podcast Addict\|Les Échos d&39;Arkham - La boite de base de l&39;Appel de Cthulhu de EDGE - Podcast Addict]]                                                             | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
 
 { .block-language-dataview}
 
-### Segment 4 : Podcasts Et Musiques
+## Segment 5 : Projets & Apps
 
-#### 🎧 Cette Semaine, J'ai Écouté
-
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-### Segment 5 : Projets & Apps
-
-#### 💡 Cette Semaine, J'ai Travaillé Sur
-
-##### Sources
+### 💡 Cette Semaine, J'ai Travaillé Sur
 
 | File                                                         | date       | status |
 | ------------------------------------------------------------ | ---------- | ------ |
@@ -95,113 +65,20 @@
 
 { .block-language-dataview}
 
-#### 🖥 Cette Semaine, J'ai Testé
-
-##### Sources
+### 🖥 Cette Semaine, J'ai testé
 
 | File | rating | review |
 | ---- | ------ | ------ |
 
 { .block-language-dataview}
 
-### Segment 6 : Jeux
+## Segment 6 : Jeux
 
-#### 🎮 Cette Semaine, J'ai Joué
-
-##### Sources
+### 🎮 Cette Semaine, J'ai Joué
 
 | File | rating | review |
 | ---- | ------ | ------ |
 
 { .block-language-dataview}
 
-### Segment 7 : Interaction Avec Les Auditeurs
 
-### Conclusion
-
-- Récapitulation des temps forts de l'épisode.
-- Invitation à s'abonner au podcast et à le noter.
-- Annonce du thème du prochain épisode (si pertinent).
-- Remerciements aux auditeurs pour leur fidélité.
-
-# Description De L'épisode
-
-```prompt
-- Create a catchy French post for Instagram on the new episode of the podcast "La semaine de Valkann" with this note
-```
-
-# Sommaire De L'épisode
-
----
-
-🍿 Cette semaine, j'ai vu :
-
-
-{ .block-language-dataview}
-
----
-
-📚 Cette semaine, j'ai lu :
-
-
-{ .block-language-dataview}
-
----
-
-🎧 Cette semaine, j'ai écouté :
-
-
-{ .block-language-dataview}
-
----
-
-💡 Cette semaine, j'ai travaillé sur :
-
-- Organisation du PKM
-- 2024-04-25
-
-{ .block-language-dataview}
-
----
-
-🖥 Cette semaine, j'ai testé:
-
-
-{ .block-language-dataview}
-
----
-
-🎮 Cette semaine, j'ai joué :
-
-
-{ .block-language-dataview}
-
-# Instagram
-
-```Texte d'image
-
-Logo du podcast la semaine de Valkann. 
-Plusieurs éléments de pop culture qui surgissent d'un livre. On y trouve des manettes de console, des comics, des dés, du pop-corn et des lunettes 3D a l'ancienne, des livres de jdr un vinyle et un casque.
-
-Le livre est tenu par une main.
-```
-
-> [!NOTE] Texte
-
-```prompt
-- Suggest a French title for the episode based on its content 
-```
-
-> [!NOTE] Titre
-
-## 🏁 Les 10 plus Vieilles Choses Que Je Dois Finir
-
-### Sources
-
-| File                                                                                                                                                                                                                                             | Type | week | updated |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---- | ------- |
-| [[Sources/Ce que j'ai lu/Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica\|Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica]] | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/Les Secrets de New York\|Les Secrets de New York]]                                                                                                                                                                   | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/La seconde vie de Marion du Faouët\|La seconde vie de Marion du Faouët]]                                                                                                                                             | \-   | \-   | \-      |
-
-{ .block-language-dataview}
