--- a/src/site/notes/Calendrier/Semaines/2024-18.md
+++ b/src/site/notes/Calendrier/Semaines/2024-18.md
@@ -5,88 +5,53 @@
 
 # 2024-18
 
-## Cette semaine
+# Cette semaine
 
-1. Email
-2. Evènements
-3. Notes
-4. Tasks
-
-> [!check] To do this week
-> 
-> ```tasks
-> due 2024-04-29 2024-05-05
-> group by due
-> short mode
-> show urgency
-> ```
-
-## Podcast
-
-### Introduction
+## Introduction
 
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
-### Segment 1 & 2 : Cinéma & Séries TV
+## Segment 1 & 2 : Cinéma & Séries TV
 
-#### 🍿 Cette Semaine, J'ai Vu
+### 🍿 Cette Semaine, J'ai Vu
 
-##### Films
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### Séries TV
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                     | rating | review                                                                                                                                                                                                                                     |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| [[Sources/Ce que j'ai vu/Before You Write Frame Your Thoughts with Concept Modeling\|Before You Write Frame Your Thoughts with Concept Modeling]]                                                                     | 🟢     | Super vidéo sur l'explication des Map of Concept ou des Concept modelling sous forme de schéma. C'est clair et bien expliqué et ça aide beaucup à comprendre et appronfondir certaines idées ou processus.                                 |
+| [[Sources/Ce que j'ai vu/Coding Challenge 180 Falling Sand\|Coding Challenge 180 Falling Sand]]                                                                                                                       | 🟢     | Une vidéo marrante sur comment on peut coder certains aspect physique. Ici la chutte du sable                                                                                                                                              |
+| [[Sources/Ce que j'ai vu/Connecting visual notes with Obsidian Excalidraw\|Connecting visual notes with Obsidian Excalidraw]]                                                                                         | 🟢     | Très intéressant de voir comment a évoluer le plugin excalidraw pour justement prendre plus en compte les notes hybrides. j'ai découvert les insert de partie de dessin dans la partie texte des notes c'est bien fait.                    |
+| [[Sources/Ce que j'ai vu/Gloutons et Dragons\|Gloutons et Dragons]]                                                                                                                                                   | 🟢     | Halalalala cette fin de saison ! Vivement la suite !                                                                                                                                                                                       |
+| [[Sources/Ce que j'ai vu/Le Coeur A Ses Raisons S01E01\|Le Coeur A Ses Raisons S01E01]]                                                                                                                               | 🟢     | On regarde de nouveau la série avec ma femme. C'est toujours aussi absurde et drôle. Je suis sur qu'on pourrait utiliser passion de las passiones pour en faire une adpatation en JDR. En tout cas une série bien pour se vider la tête :) |
+| [[Sources/Ce que j'ai vu/Masters of the Universe Revolution (Série télévisée 2024) ⭐ 7.5  Animation, Action, Aventure\|Masters of the Universe Revolution (Série télévisée 2024) ⭐ 7.5  Animation, Action, Aventure]] | 🟢     | J'avais déjà vu la première partie nommée Révélation, j'avais trouvé ça bien, assez mature comme reviste des maitres de l'univers. Je viens de commencer et ça semble encore plus sombre que la saison 1.                                  |
 
 { .block-language-dataview}
 
-##### YouTube
+## Segment 3 : Culture Littéraire & Articles
 
-| File | rating | review |
-| ---- | ------ | ------ |
+### 📚 Cette Semaine, J'ai Lu
 
-{ .block-language-dataview}
-
-### Segment 3 : Culture Littéraire & Articles
-
-#### 📚 Cette Semaine, J'ai Lu
-
-##### Livres
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                     | rating | review                                                                                                                                                                                                                                         |
+| ---------------------------------------------------------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai lu/Mener des parties de jeu de rôle - Créer un Scénario\|Mener des parties de jeu de rôle - Créer un Scénario]] | 🟢     | Un article de Tristan Lhomme sur la création de scénario de jeu de rôle, ou il explique sa méthode. C'est pas mal a destination des scénarios pour publication mais on trouver des outils intéressant à réutiliser dans ses propres créations. |
 
 { .block-language-dataview}
 
-##### Articles
+## Segment 4 : Podcasts Et Musiques
 
-| File | rating | review |
-| ---- | ------ | ------ |
+### 🎧 Cette Semaine, J'ai Écouté
 
-{ .block-language-dataview}
-
-### Segment 4 : Podcasts Et Musiques
-
-#### 🎧 Cette Semaine, J'ai Écouté
-
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                                                                 | rating | review                                                                                                                                                                                                            |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Lhistoire de Nintendo  des yakuzas aux jeux vidéo - Podcast Addict\|Arnaques, crimes et putaclic - Lhistoire de Nintendo  des yakuzas aux jeux vidéo - Podcast Addict]]                               | 🟢     | Une histoire de Nintendo de sa création à maintenant, comme l'entreprise s'est créée, comment elle s'est modifiée et adaptée, c'est vraiment très intéressant et il a plein de chose que j'ignorais complètement. |
+| [[Sources/Ce que j'ai écouté/DataGen - 124 - ManoMano  L’ex-Chief Product Officer partage sa Stratégie Data - Podcast Addict\|DataGen - 124 - ManoMano  L’ex-Chief Product Officer partage sa Stratégie Data - Podcast Addict]]                                   | 🟢     | Une vis'on de la data qui est plutôt pertinente, je trouve : la data qui quoi et ce qui se passe, mais pas pourquoi. Les idées derrières autour des bons métrics et KPI sont justifiés. j'ai bien aimé.           |
+| [[Sources/Ce que j'ai écouté/Le rendez-vous de létrange - Episode 20  Laffaire Wilma Montesi (avec Kurt du podcast Obscurum) - Podcast Addict\|Le rendez-vous de létrange - Episode 20  Laffaire Wilma Montesi (avec Kurt du podcast Obscurum) - Podcast Addict]] | 🟢     | Deux affaires différentes et étranges mais qui donne des pistes et des inspirations pour des scénarios de jeu de rôle. Comme souvent la réalité dépasse la fiction.                                               |
 
 { .block-language-dataview}
 
-### Segment 5 : Projets & Apps
+## Segment 5 : Projets & Apps
 
-#### 💡 Cette Semaine, J'ai Travaillé Sur
-
-##### Sources
+### 💡 Cette Semaine, J'ai Travaillé Sur
 
 | File                                                                                                                            | date       | status |
 | ------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
@@ -96,114 +61,20 @@
 
 { .block-language-dataview}
 
-#### 🖥 Cette Semaine, J'ai testé
-
-##### Sources
+### 🖥 Cette Semaine, J'ai testé
 
 | File | rating | review |
 | ---- | ------ | ------ |
 
 { .block-language-dataview}
 
-### Segment 6 : Jeux
+## Segment 6 : Jeux
 
-#### 🎮 Cette Semaine, J'ai Joué
-
-##### Sources
+### 🎮 Cette Semaine, J'ai Joué
 
 | File | rating | review |
 | ---- | ------ | ------ |
 
 { .block-language-dataview}
 
-### Segment 7 : Interaction Avec Les Auditeurs
 
-### Conclusion
-
-- Récapitulation des temps forts de l'épisode.
-- Invitation à s'abonner au podcast et à le noter.
-- Annonce du thème du prochain épisode (si pertinent).
-- Remerciements aux auditeurs pour leur fidélité.
-
-# Description De L'épisode
-
-```prompt
-- Create a catchy French post for Instagram on the new episode of the podcast "La semaine de Valkann" with this note
-```
-
-# Sommaire De L'épisode
-
----
-
-🍿 Cette semaine, j'ai vu :
-
-
-{ .block-language-dataview}
-
----
-
-📚 Cette semaine, j'ai lu :
-
-
-{ .block-language-dataview}
-
----
-
-🎧 Cette semaine, j'ai écouté :
-
-
-{ .block-language-dataview}
-
----
-
-💡 Cette semaine, j'ai travaillé sur :
-
-- Organisation du PKM
-- Ceux qui luttaient dans les ténèbres
-- Dilettante
-
-{ .block-language-dataview}
-
----
-
-🖥 Cette semaine, j'ai testé:
-
-
-{ .block-language-dataview}
-
----
-
-🎮 Cette semaine, j'ai joué :
-
-
-{ .block-language-dataview}
-
-# Instagram
-
-```Texte d'image
-
-Logo du podcast la semaine de Valkann. 
-Plusieurs éléments de pop culture qui surgissent d'un livre. On y trouve des manettes de console, des comics, des dés, du pop-corn et des lunettes 3D a l'ancienne, des livres de jdr un vinyle et un casque.
-
-Le livre est tenu par une main.
-```
-
-> [!NOTE] Texte
-
-```prompt
-- Suggest a French title for the episode based on its content 
-```
-
-> [!NOTE] Titre
-
-## 🏁 Les 10 plus Vieilles Choses Que Je Dois Finir
-
-### Sources
-
-| File                                                                                                                                                                                                                                             | Type | week | updated |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---- | ------- |
-| [[Sources/Ce que j'ai lu/Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica\|Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica]] | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/Les Secrets de New York\|Les Secrets de New York]]                                                                                                                                                                   | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/La seconde vie de Marion du Faouët\|La seconde vie de Marion du Faouët]]                                                                                                                                             | \-   | \-   | \-      |
-
-{ .block-language-dataview}
