--- a/src/site/notes/Calendrier/Semaines/2024-19.md
+++ b/src/site/notes/Calendrier/Semaines/2024-19.md
@@ -5,88 +5,52 @@
 
 # 2024-19
 
-## Cette semaine
+# Cette semaine
 
-1. Email
-2. Evènements
-3. Notes
-4. Tasks
-
-> [!check] To do this week
-> 
-> ```tasks
-> due 2024-05-06 2024-05-12
-> group by due
-> short mode
-> show urgency
-> ```
-
-## Podcast
-
-### Introduction
+## Introduction
 
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
-### Segment 1 & 2 : Cinéma & Séries TV
+## Segment 1 & 2 : Cinéma & Séries TV
 
-#### 🍿 Cette Semaine, J'ai Vu
+### 🍿 Cette Semaine, J'ai Vu
 
-##### Films
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### Séries TV
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                               | rating | review                                                                                                                                                                                                                                                                                       |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai vu/How to use QuickAdd for Obsidian - with examples\|How to use QuickAdd for Obsidian - with examples]]                                                   | 🟢     | La vidéo à avoir de côté pour se faire une piqure de rappel sur toutes les possibilités de ce plugin : ajout à la volée dans des notes statiques ou dynamiques, ajout de note, rajout de méta donnée. Bref comment mettre des raccourcit sur séries d'action, un peu comme créer ses macros. |
+| [[Sources/Ce que j'ai vu/Le Coeur A Ses Raisons S01E01\|Le Coeur A Ses Raisons S01E01]]                                                                                         | 🟢     | On regarde de nouveau la série avec ma femme. C'est toujours aussi absurde et drôle. Je suis sur qu'on pourrait utiliser passion de las passiones pour en faire une adpatation en JDR. En tout cas une série bien pour se vider la tête :)                                                   |
+| [[Sources/Ce que j'ai vu/Obsidian AI Testing - Nous Hermes 2 Mistral DPO 7B\|Obsidian AI Testing - Nous Hermes 2 Mistral DPO 7B]]                                               | 🟢     | Un modèle LLLM qui> donne envie d'être testé comme assistant dans Obsidian. Je n'ai pas encore eu le temps de vraiment le faire, mais ça ne serait tardé. De plus une série de questions orienté Obsidian plutôt intéressante.                                                               |
+| [[Sources/Ce que j'ai vu/The Excalidraw-Obsidian Showcase 57 key features in just 17 minutes\|The Excalidraw-Obsidian Showcase 57 key features in just 17 minutes]]             | 🟢     | Vraiment une vidéo à se garder sous le coude pour se rappeler tout ce que peut faire le plugin Excalidraw. Après c'est quand même rapide pour vraiment assimiler toutes les ffonctionnalitésmais ça fait un bon résumé.                                                                      |
+| [[Sources/Ce que j'ai vu/Forged in Fire (Série télévisée 2015– ) ⭐ 8.2  Jeu télévisé, Télé-réalité\|Forged in Fire (Série télévisée 2015– ) ⭐ 8.2  Jeu télévisé, Télé-réalité]] | 🟡     | Je ne sais pas pourquoi je tombe à chaque sur ces épisodes et je reste scotché, c'est tellement improbable et tellement impressionnant. Bref une émission qui vide la tête, mais ne casse pas 3 pattes à un canard.                                                                          |
 
 { .block-language-dataview}
 
-##### YouTube
+## Segment 3 : Culture Littéraire & Articles
 
-| File | rating | review |
-| ---- | ------ | ------ |
+### 📚 Cette Semaine, J'ai Lu
 
-{ .block-language-dataview}
-
-### Segment 3 : Culture Littéraire & Articles
-
-#### 📚 Cette Semaine, J'ai Lu
-
-##### Livres
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                             | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+| -------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai lu/Newsletter daprès 10 ans\|Newsletter daprès 10 ans]] | 🟢     | La newsletter de Podcloud qui revient, bonne nouvelle. Pour moi deux grosses informations : Spotify qui ne se certifie pas IAB et la création d'un évènement podcast : PodParis !                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+| [[Sources/Ce que j'ai lu/S'organiser pour réussir\|S'organiser pour réussir]] | 🟢     | La fameuse méthode GTD (Getting things done) j'ai lu enfin plutôt relu ce livre qui est à la base de beaucoup de chose qu'on trouve autour des PKM et des logiciels tel qu'Obsidian. Les méthodes PARA, CODE, ACCESS et autres sont souvent des adaptations au numérique des principes qui ont été posés par David Allen. Un livre qui possède plein de bonnes choses sur lesquels réfléchir voir les mettre en place. La promesse : Une productivité sans stress. Plutôt alléchant dit comme ça, et le livre nous donne à la fois des méthodes, mais aussi des astuces sur la façon dont l'auteur pense arriver au résultat. Du coup, je repense pas mal mon [[Atlas/Organisation du PKM\|Organisation du PKM]] en améliorant la capture et aussi l'organisation, j'étais passé à côté de certaines choses la première fois ou alors ça ne m'avait pas parlé et du coup, je suis curieux de tester ce que j'ai l'impression d'avoir manqué ou d'avoir maintenant mieux compris. |
 
 { .block-language-dataview}
 
-##### Articles
+## Segment 4 : Podcasts Et Musiques
 
-| File | rating | review |
-| ---- | ------ | ------ |
+### 🎧 Cette Semaine, J'ai Écouté
 
-{ .block-language-dataview}
-
-### Segment 4 : Podcasts Et Musiques
-
-#### 🎧 Cette Semaine, J'ai Écouté
-
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                                           | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai écouté/Tech Café - Lâge dor de la réparation (ou presque) - Podcast Addict\|Tech Café - Lâge dor de la réparation (ou presque) - Podcast Addict]]                                                                     | 🟢     | Ce qui m'a le plus interpellé dans cet épisode est le rapport sur l'exposition des jeunes aux écrans. C'est un problème auquel je fais face au quotidien et on a beau essayer de faire de notre mieux maintenant les écrans sont partout et même dans les couloirs du métro. Et je pense que le législateur, même s'il n'a pas pouvoir à réguler le chez-soi des gens, devrait essayer déjà de réguler la voie publique ou semi-publique. Autre point, Shremps (l'homme grâce à qui nous avons le RGPD désormais) qui attaque ChatGPT, je trouve que c'est une bonne chose. Les entreprises de la tech ne veulent pas jouer fair-play, on le voit bien avec les données personnelles, les cookies etc. leur but, vendre et utiliser vos données sans rien débourser. Comme elles continuent en donnant à manger tout et n'importe quoi aux IAs, je trouve que c'est un juste retour de bâton que ça leur tombe dessus. |
+| [[Sources/Ce que j'ai écouté/Tech Sources  les sources des experts de la Tech - PKM, Second Cerveau, Productivité - Podcast Addict\|Tech Sources  les sources des experts de la Tech - PKM, Second Cerveau, Productivité - Podcast Addict]] | 🟢     | Je ne m'attendais pas à ça, mais je suis surpris sur pas mal d'informations et de discussion dans ce podcast notament sur la responsabilité des créateurs de contenus, l'idée e bruit autour des sujets disponibles sur le net, la justification des info produits. Je trouve ça plutôt intéressant et ça me fait beaucoup réfléchir. Je me demande si je ne vais pas essayer de me mettre plus sur le créneau du PKM en français et partagé via le blog et le podcast dans un premier temps des informations et concept plus travaillés et plus qualitatifs.                                                                                                                                                                                                                                                                                                                                                          |
 
 { .block-language-dataview}
 
-### Segment 5 : Projets & Apps
+## Segment 5 : Projets & Apps
 
-#### 💡 Cette Semaine, J'ai Travaillé Sur
-
-##### Sources
+### 💡 Cette Semaine, J'ai Travaillé Sur
 
 | File                                                                                                                                                                         | date       | status |
 | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
@@ -103,115 +67,22 @@
 
 { .block-language-dataview}
 
-#### 🖥 Cette Semaine, J'ai testé
+### 🖥 Cette Semaine, J'ai testé
 
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-### Segment 6 : Jeux
-
-#### 🎮 Cette Semaine, J'ai Joué
-
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                            | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                               |
+| --------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| [[Sources/Ce que j'ai testé/Fleeting Notes\|Fleeting Notes]] | 🟢     | En cours de test, un logiciel qui sur la partie mobile est beaucoup plus réactif qu'Obsidian pour faire des capture. Par contre je dois revoir la façon dont j'organise ma Vault Obsidian et je dois réfléchir à savoir si je synchronise dans un sens ou les deux. Bref en résolvant mon probleme de fluidité de capture je me pose du coup pas mal de question de comment intégrer cette capture pour qu'elle soit opérationnelle. |
 
 { .block-language-dataview}
 
-### Segment 7 : Interaction Avec Les Auditeurs
+## Segment 6 : Jeux
 
-### Conclusion
+### 🎮 Cette Semaine, J'ai Joué
 
-- Récapitulation des temps forts de l'épisode.
-- Invitation à s'abonner au podcast et à le noter.
-- Annonce du thème du prochain épisode (si pertinent).
-- Remerciements aux auditeurs pour leur fidélité.
-
-# Description De L'épisode
-
-```prompt
-- Create a catchy French post for Instagram on the new episode of the podcast "La semaine de Valkann" with this note
-```
-
-# Sommaire De L'épisode
-
----
-🍿 Cette semaine, j'ai vu :
-
+| File                                                                            | rating | review                                                                                                                                                                                                                                                                                   |
+| ------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce à quoi j'ai joué/Terra Nil — Wikipédia\|Terra Nil — Wikipédia]] | 🟢     | Chill, reposant, compris dans l'abonnement Netflix, ce petit jeu m'a tenue compagnie dans mes trajets en train des dernières semaines. Problème ça bouffe quand même la batterie de mon téléphone, mais c'est un jeu de gestion tranquille et cosy qui donne envie de se plonger dedans. |
 
 { .block-language-dataview}
 
----
-📚 Cette semaine, j'ai lu :
 
-
-{ .block-language-dataview}
-
----
-🎧 Cette semaine, j'ai écouté :
-
-
-{ .block-language-dataview}
-
----
-💡 Cette semaine, j'ai travaillé sur :
-
-- Organisation avec les Tags
-- Pkm démarche de capture, puis extraction de morceaux choisis 
-- Publier ou oublier une lettre un rang dans l'alphabet les sépare
-- Retravailler le système D100 en m'inspirant d'Aria
-- Un jeu de gestion avec le point de vue bébé et le point de vue parents
-- Un parc d'attraction hanté ou abandonné dans un jeu de role
-- Faire une liste de mes limites
-- Revoir - 1 - La prise de notes pour la formation PKM
-- Faire un bilan professionnel, et voir l'avenir sur les 5 horizon gtd
-- Créer et vendre une formation Obsidian
-
-{ .block-language-dataview}
-
----
-🖥 Cette semaine, j'ai testé:
-
-
-{ .block-language-dataview}
-
----
-🎮 Cette semaine, j'ai joué :
-
-
-{ .block-language-dataview}
-
-# Instagram
-
-```Texte d'image
-
-Logo du podcast la semaine de Valkann. 
-Plusieurs éléments de pop culture qui surgissent d'un livre. On y trouve des manettes de console, des comics, des dés, du pop-corn et des lunettes 3D a l'ancienne, des livres de jdr un vinyle et un casque.
-
-Le livre est tenu par une main.
-```
-
-> [!NOTE] Texte
-
-```prompt
-- Suggest a French title for the episode based on its content 
-```
-
-> [!NOTE] Titre
-
-## 🏁 Les 10 plus Vieilles Choses Que Je Dois Finir
-
-### Sources
-
-| File                                                                                                                                                                                                                                             | Type | week | updated |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---- | ------- |
-| [[Sources/Ce que j'ai lu/Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica\|Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica]] | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/Les Secrets de New York\|Les Secrets de New York]]                                                                                                                                                                   | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/La seconde vie de Marion du Faouët\|La seconde vie de Marion du Faouët]]                                                                                                                                             | \-   | \-   | \-      |
-
-{ .block-language-dataview}
