--- a/src/site/notes/Calendrier/Semaines/2024-20.md
+++ b/src/site/notes/Calendrier/Semaines/2024-20.md
@@ -5,88 +5,70 @@
 
 # 2024-20
 
-## Cette semaine
+# Cette semaine
 
-1. Email ✅
-2. Evènements
-3. Notes
-4. Tasks
-
-> [!check] To do this week
-> 
-> ```tasks
-> due 2024-05-13 2024-05-19
-> group by due
-> short mode
-> show urgency
-> ```
-
-## Podcast
-
-### Introduction
+## Introduction
 
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
-### Segment 1 & 2 : Cinéma & Séries TV
+## Segment 1 & 2 : Cinéma & Séries TV
 
-#### 🍿 Cette Semaine, j'ai Vu
+### 🍿 Cette Semaine, J'ai Vu
 
-##### Films
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### Séries TV
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                     | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| [[Sources/Ce que j'ai vu/2024-05-15 - Webinaire - Sens du travail\|2024-05-15 - Webinaire - Sens du travail]]                                                         | 🟢     | Un très bon webinaire donné par l'APEC sur la façon de trouver un sens à son travail, comment y arriver, bien rappeler que ce n'ets pas qu'un effort individuel. J'ai ebaucoup aimé et j'ai trouvé pas mal de point intéressant.                                                                                                                                                                                                                                                                                                     |
+| [[Sources/Ce que j'ai vu/Delete More Notes\|Delete More Notes]]                                                                                                       | 🟢     | Une courte vidéo, concise, avec un vrai conseil sur la prise de note. J'aime beaucoup ce format. Le conseil en question : faire le ménage dans ses notes, vider les archives penser à enlever les sources que l'on utilise plus ou que l'on a fini de travailler. On ne peut pas garder maintenable un système de plusieurs milliers de notes seul, il faut que le PKM ne soit pas qu'un endroit de stockage de tâche "Un jour peut-être" mais un outil qui permette de concrétiser vos projets grâce aux informations de vos notes. |
+| [[Sources/Ce que j'ai vu/2024-05-17 - Management - comment appréhender la fonction de Manager\|2024-05-17 - Management - comment appréhender la fonction de Manager]] | 🟡     | Formation intéressante de l'APEC mais moins bien que la précédente sur les ens au travail. Un peu plus bateau j'ai trouvé, même si il y a quand même des choses a prendre                                                                                                                                                                                                                                                                                                                                                            |
+| [[Sources/Ce que j'ai vu/Jujutsu Kaisen\|Jujutsu Kaisen]]                                                                                                             | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
 
 { .block-language-dataview}
 
-##### YouTube
+## Segment 3 : Culture Littéraire & Articles
 
-| File | rating | review |
-| ---- | ------ | ------ |
+### 📚 Cette Semaine, J'ai Lu
 
-{ .block-language-dataview}
-
-### Segment 3 : Culture Littéraire & Articles
-
-#### 📚 Cette Semaine, j'ai Lu
-
-##### Livres
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### Articles
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                     | rating | review                                                                                                                                                                                                                                                                                                                                                                                             |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai lu/3 Writing Tricks That Don’t Work In The End - Nick Milo\|3 Writing Tricks That Don’t Work In The End - Nick Milo]]                                           | 🟢     | 3 pièges à éviter pour avoir un système qui fonctionne bien : le trop-plein de structure, le [[Cartes/Le Syndrome de l’objet brillant\|Le Syndrome de l’objet brillant]], la fiabilité du système                                                                                                                                                                                                                                          |
+| [[Sources/Ce que j'ai lu/Capture what resonates - Mike Schmitz\|Capture what resonates - Mike Schmitz]]                                                                               | 🟢     | De l'importance de ne capturer que ce qui résonne vraiment pour vous, ce qui déclenche l'étincelle afin d'éviter de se retrouver à surligner tout le livre par exemple.                                                                                                                                                                                                                            |
+| [[Sources/Ce que j'ai lu/Curate and keep only the best stuff - Mike Schmitz\|Curate and keep only the best stuff - Mike Schmitz]]                                                     | 🟢     | Un article sur l'importance de faire la curation de ses notes. L'importance de la revue régulière des idées et de sa boite de réceptions d'idée et pourquoi il faut faire du ménage dans tout cela.                                                                                                                                                                                                |
+| [[Sources/Ce que j'ai lu/Deep work retrouver la concentration dans un monde de distractions\|Deep work retrouver la concentration dans un monde de distractions]]                     | 🟢     | Excellent livre pour moi, j'ai trouvé beaucoup de choses qui résonnent avec ma vie professionnelle actuelle et pas mal d'idée pour essayer de retrouver de la concentration dans mon travail. L'élimination des tâches superficielles est déjà quelque chose que j'essayais de faire implicitement , maisle fait de nommer ces tâches etd 'en prendre conscience va jel'espère grandement m'aider. |
+| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 288\|Dense Discovery – Issue 288]]                                                                                                   | 🟢     | L'endroit où nous gardons notre argent est important, il est important de s'assurer que l'argent investit ou qui travaille ne sert pas à financer des choses qui vont contre [[Atlas/Mes Valeurs\|Mes Valeurs]]. Le fait que le système ne donne de que des valeurs pécuniaires aux investissements.                                                                                                                  |
+| [[Sources/Ce que j'ai lu/How to Build a Tag and Folder System to Organise your Notes - Bianca Pereira\|How to Build a Tag and Folder System to Organise your Notes - Bianca Pereira]] | 🟢     | Une conception intéressante en hybride (dossier + tag) assez proche de ce que j'utilise et je tente d'améliorer. Elle définit des types de rangement à utiliser suivant les types de notes. J'aime bien sa réflexion sur le système.                                                                                                                                                               |
+| [[Sources/Ce que j'ai lu/La Gazette du Miskatonic  Mai 2024\|La Gazette du Miskatonic  Mai 2024]]                                                                                     | 🟢     | Quelques lieux et livre à noter dans cette newsletter si vous êtes fan de Lovecraft : le fonds Jacques Bergier à la médiathèque Voyelles de Charleville-Mézières, les livres : "La sonde et la taille" et  "Pourquoi Lire de la science-fiction et de la fantasy ?". Tout ça vient de rejoindre ma pile des choses à voir.                                                                         |
+| [[Sources/Ce que j'ai lu/What job are you hiring Obsidian to do - Mike Schmitz\|What job are you hiring Obsidian to do - Mike Schmitz]]                                               | 🟢     | Une newsletter qui souligne la puissance, mais aussi le côté fourre tout d'Obsidian. Cela m'amène personnellement à une question : doit-on séparer les vault Obsidian par fonction ? Où doit-on essayer de travailler avec une seule vault qui remplirait plusieurs buts (journal personnel, gestion de tâches, prise de note de livre, écriture…)                                                 |
+| [[Sources/Ce que j'ai lu/😴 Sleep is the Killer App\|😴 Sleep is the Killer App]]                                                                                                     | 🟡     | Des conseils pour améliorer son sommeil, un peu bateau e déjà connu, mais j'aime que l'auteur partage sa routine du soir.                                                                                                                                                                                                                                                                          |
+| [[Sources/Ce que j'ai lu/Creativity is a system -Mike Schmitz\|Creativity is a system -Mike Schmitz]]                                                                                 | 🟡     | Un système de gestiond e contenu qui au final est une adaptation de GTD assez classique.                                                                                                                                                                                                                                                                                                           |
+| [[Sources/Ce que j'ai lu/Human Curiosity in the Age of AI - Anne-Laure Le Cunff\|Human Curiosity in the Age of AI - Anne-Laure Le Cunff]]                                             | 🟡     | Un article intéressant, mais qui ne m'a pas beaucoup parlé sur les différences de curiosité entre l'humain et l'IA et comment les deux peuvent se montrer plus utile dans leur complémentarité.                                                                                                                                                                                                    |
 
 { .block-language-dataview}
 
-### Segment 4 : Podcasts Et Musiques
+## Segment 4 : Podcasts Et Musiques
 
-#### 🎧 Cette Semaine, j'ai Écouté
+### 🎧 Cette Semaine, J'ai Écouté
 
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                                                                                                                                                                                                 | rating | review                                                                                                                                                                                                                                                                                                                                                                                                      |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai écouté/175937429\|175937429]]                                                                                                                                                                                                                                                                                                                                               | 🟢     | Un podcast qui m'a donné envie de découvrir plus Philip K Dick. Je me rends compte que j'ai lu vraiment peu de choses de lui et que je ne connaissais pas du tout sa vie.                                                                                                                                                                                                                                   |
+| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Lhistoire de Reddit épisode 2  la fin de lespoir dun internet libre et démocratique - Podcast Addict\|Arnaques, crimes et putaclic - Lhistoire de Reddit épisode 2  la fin de lespoir dun internet libre et démocratique - Podcast Addict]]                                                                                           | 🟢     | L'histoire de Reddit en deux parties. C'est assez sympa de voir comment est né et à évoluer ce site devenu incontournable (et qui maintenant sert de réservoir à réponse pour google.)                                                                                                                                                                                                                      |
+| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Reddit  lhistoire mouvementée de linternet démocratique - Podcast Addict\|Arnaques, crimes et putaclic - Reddit  lhistoire mouvementée de linternet démocratique - Podcast Addict]]                                                                                                                                                   | 🟢     | L'histoire de Reddit en deux parties. C'est assez sympa de voir comment est né et à évoluer ce site devenu incontournable (et qui maintenant sert de réservoir à réponse pour google.)                                                                                                                                                                                                                      |
+| [[Sources/Ce que j'ai écouté/Coup Critique - ENTREVUE JDR  Déconte — un mélange entre le jeu de rôle et le conte traditionnel - Podcast Addict\|Coup Critique - ENTREVUE JDR  Déconte — un mélange entre le jeu de rôle et le conte traditionnel - Podcast Addict]]                                                                                                                               | 🟢     | Une entrevue sympa sur un type de Live Play qui me fait penser à l'épisode final de Game of Role auquel on avait participé avec Riley. C'était très immersif pour le public et très agréable à suivre. Je leur souhaite tous mes vœux de réussite, il faut plus d'initiative de ce genre.                                                                                                                   |
+| [[Sources/Ce que j'ai écouté/Lair de rien - 015 - Notes, journal et inspirations - Podcast Addict\|Lair de rien - 015 - Notes, journal et inspirations - Podcast Addict]]                                                                                                                                                                                                                         | 🟢     | toujours un grand plaisir d'écouter Eiffair (surtout quand il dit autant de bien de mon podcast). Comme d'habitude, la simple écoute de ses épisodes me rajoute une tonne de chose à voir, à lire, à découvrir. Donc n'hésitez pas à le suivre, cette fois, il parle de PKM, de photo, de lecture, de vidéo.                                                                                                |
+| [[Sources/Ce que j'ai écouté/Science ou Fiction - La pieuvre a trois coeurs et neuf cerveaux, vrai ou faux  - Podcast Addict\|Science ou Fiction - La pieuvre a trois coeurs et neuf cerveaux, vrai ou faux  - Podcast Addict]]                                                                                                                                                                   | 🟢     | Franchement, je ne sais pas si vous avez eu cette question dans le vieux trivial poursuit bleu des années s80 /90, mais depuis que j'ai tiré la carte, je me suis toujours posé la question de savoir si c'était réel et bien spoiler : oui, mais pas comme vous le croyez.                                                                                                                                 |
+| [[Sources/Ce que j'ai écouté/Tech Café - Radio Café - Podcast Addict\|Tech Café - Radio Café - Podcast Addict]]                                                                                                                                                                                                                                                                                   | 🟢     | Épisode spécial très drôle de tech café, un peu déçu, j'avais cru comprendre qu'on aurait une chanson en français, mais en fait pas du tout, peut-être pour une deuxième émission radio dans quelque temps. Blague à part, le fait que tout ait été fait avec IA en local est impressionnant et montre à quel point cette technologie se démocratise de plus en plus et se rend de plus en plus accessible. |
+| [[Sources/Ce que j'ai écouté/Investir Simple - 146 - 11 astuces pour payer moins dimpôts - Podcast Addict\|Investir Simple - 146 - 11 astuces pour payer moins dimpôts - Podcast Addict]]                                                                                                                                                                                                         | 🟡     | Un court résumé des méthodes d'optimisation, j'ai écouté par curiosité, c'est bien fait, mais au final ce n'est pas pour moi (les méthodes et ce type de sujet)                                                                                                                                                                                                                                             |
+| [[Sources/Ce que j'ai écouté/LES podcastS de Dany - moi mon étang et les grenouilles - Podcast Addict\|LES podcastS de Dany - moi mon étang et les grenouilles - Podcast Addict]]                                                                                                                                                                                                                 | 🟡     | Podcast introspection de Dany, c'est reposant et calme à écouter. Pas forcément mon truc, mais une fois de temps en temps pourquoi pas.                                                                                                                                                                                                                                                                     |
+| [[Sources/Ce que j'ai écouté/Case Départ - Le podcast manga et développement personnel • Comment les mangas peuvent-ils nous aider dans le choix du coeur  1er Partie - Case Départ - S03E04 • Podcast Addict\|Case Départ - Le podcast manga et développement personnel • Comment les mangas peuvent-ils nous aider dans le choix du coeur  1er Partie - Case Départ - S03E04 • Podcast Addict]] | \-     | de bonnes choses, d'autres qui me parlent moins. Une écoute un peu mitigé de l'écoute de cet épisode, au final peu de référence manga pour moi ou de parallèle avec les mangas, et un son un peu moyen. J'attends le deuxième épisode pour voir.                                                                                                                                                            |
+| [[Sources/Ce que j'ai écouté/Deux connards dans un bibliobus - Mets-toi bien, fais-en moins ... raboter son cœur de métier - Podcast Addict\|Deux connards dans un bibliobus - Mets-toi bien, fais-en moins ... raboter son cœur de métier - Podcast Addict]]                                                                                                                                     | \-     | Une réflexion intéressante: parler de ce qui peut mal se passer, quand tout le monde est bien dans sa peau et ne pas atendre l'incendie pour prévoir les extincteurs.                                                                                                                                                                                                                                       |
+| [[Sources/Ce que j'ai écouté/musicForProgramming();\|musicForProgramming();]]                                                                                                                                                                                                                                                                                                                     | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                          |
 
 { .block-language-dataview}
 
-### Segment 5 : Projets & Apps
+## Segment 5 : Projets & Apps
 
-#### 💡 Cette Semaine, J'ai Travaillé Sur
-
-##### Sources
+### 💡 Cette Semaine, J'ai Travaillé Sur
 
 | File                                                                                                                                                                                      | date       | status |
 | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
@@ -99,110 +81,22 @@
 
 { .block-language-dataview}
 
-#### 🖥 Cette Semaine, J'ai testé
+### 🖥 Cette Semaine, J'ai testé
 
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-### Segment 6 : Jeux
-
-#### 🎮 Cette Semaine, J'ai Joué
-
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                    | rating | review                                                                                                                                                                                                                                                                                                      |
+| ----------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai testé/Pocket Bard – Applications sur Google Play\|Pocket Bard – Applications sur Google Play]] | 🟢     | Merci à Ctrl-Alt-K de m'avoir fait découvrir cette petite appli qui peut servir pour mettre une ambiance sonore à une table de JDR mais qui peut aussi servir comme bruit blanc pour la concentration au travail et pour s'endormir (la partie élément météo est très efficace pour ça sur moi en tout cas) |
 
 { .block-language-dataview}
 
-### Segment 7 : Interaction Avec Les Auditeurs
+## Segment 6 : Jeux
 
-### Conclusion
+### 🎮 Cette Semaine, J'ai Joué
 
-- Récapitulation des temps forts de l'épisode.
-- Invitation à s'abonner au podcast et à le noter.
-- Annonce du thème du prochain épisode (si pertinent).
-- Remerciements aux auditeurs pour leur fidélité.
-
-# Description De L'épisode
-
-```prompt
-- Create a catchy French post for Instagram on the new episode of the podcast "La semaine de Valkann" with this note
-```
-
-# Sommaire De L'épisode
-
----
-🍿 Cette semaine, j'ai vu :
-
+| File                                                | rating | review                                                                                                                     |
+| --------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce à quoi j'ai joué/Balatro\|Balatro]] | 🟢     | J'en parlais la semaine dernière, Balatro est sorti et c'est super cool, j'ai déjà passé beaucoup de trop de temps dessus. |
 
 { .block-language-dataview}
 
----
-📚 Cette semaine, j'ai lu :
 
-
-{ .block-language-dataview}
-
----
-🎧 Cette semaine, j'ai écouté :
-
-
-{ .block-language-dataview}
-
----
-💡 Cette semaine, j'ai travaillé sur :
-
-- Organisation avec les Tags
-- L'opium Jaune
-- Estimer un nombre d'heure - pomodoro pour une tâche et répartir ces heures sur un an.
-- Faire les tâches par trois - deux agréables et une moins agréable
-- Voir pour utilisation de Anytype pour suivre le podcast JDR Academy
-
-{ .block-language-dataview}
-
----
-🖥 Cette semaine, j'ai testé:
-
-
-{ .block-language-dataview}
-
----
-🎮 Cette semaine, j'ai joué :
-
-
-{ .block-language-dataview}
-
-# Instagram
-
-```Texte d'image
-
-Logo du podcast la semaine de Valkann. 
-Plusieurs éléments de pop culture qui surgissent d'un livre. On y trouve des manettes de console, des comics, des dés, du pop-corn et des lunettes 3D a l'ancienne, des livres de jdr un vinyle et un casque.
-
-Le livre est tenu par une main.
-```
-
-> [!NOTE] Texte
-
-```prompt
-- Suggest a French title for the episode based on its content 
-```
-
-> [!NOTE] Titre
-
-## 🏁 Les 10 plus Vieilles Choses Que Je Dois Finir
-
-### Sources
-
-| File                                                                                                                                                                                                                                             | Type | week | updated |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---- | ------- |
-| [[Sources/Ce que j'ai lu/Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica\|Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica]] | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/Les Secrets de New York\|Les Secrets de New York]]                                                                                                                                                                   | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/La seconde vie de Marion du Faouët\|La seconde vie de Marion du Faouët]]                                                                                                                                             | \-   | \-   | \-      |
-
-{ .block-language-dataview}
