--- a/src/site/notes/Calendrier/Semaines/2024-23.md
+++ b/src/site/notes/Calendrier/Semaines/2024-23.md
@@ -5,68 +5,6 @@
 
 # Cette semaine
 
-1. Email
-2. Evènements
-3. Notes
-4. Tasks
-
-> [!check] To do this week
-> 
->  - [[Idées/la côte des squelettes de Namibie\|la côte des squelettes de Namibie]]
-> - [[Idées/Les tisseurs de mythes\|Les tisseurs de mythes]]
-> - [[Idées/Nom de PNJ\|Nom de PNJ]]
-> - [[Idées/Poulpe plombier\|Poulpe plombier]]
-> - [[Idées/Train fantôme\|Train fantôme]]
-> - [[Projects/Ceux qui luttaient dans les ténèbres/Ceux qui luttaient dans les ténèbres\|Ceux qui luttaient dans les ténèbres]]
-> - [[Sources/Ce que j'ai vu/Mulligan\|Mulligan]]
-> - [[Sources/Ce que j'ai vu/Onmyôji Celui qui parle aux démons\|Onmyôji Celui qui parle aux démons]]
-> - [[Sources/Ce que j'ai écouté/76 - Christophe Michalak, chef pâtissier et entrepreneur -\|76 - Christophe Michalak, chef pâtissier et entrepreneur -]]
-> - [[Sources/Ce que j'ai écouté/Algorithmes et Science-Fiction - Aurélie Jean 174 • Cest plus que de la SF - Podcast Addict\|Algorithmes et Science-Fiction - Aurélie Jean 174 • Cest plus que de la SF - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Au Revoir ActuSF - Jérome Vincent 175 • Cest plus que de la SF - Podcast Addict\|Au Revoir ActuSF - Jérome Vincent 175 • Cest plus que de la SF - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/James Dean chante Barbie Girl • Tech Café - Podcast Addict\|James Dean chante Barbie Girl • Tech Café - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Tech Café • Supplément  Japan Mobility Show, un temps davance  • Podcast Addict\|Tech Café • Supplément  Japan Mobility Show, un temps davance  • Podcast Addict]]
-> - [[Sources/Ce à quoi j'ai joué/SQL Murder Mystery\|SQL Murder Mystery]]
-> - [[Sources/Ce que j'ai lu/book__images_samples_1.jpg (Image JPEG, 1772 × 1299 pixels) - Redimensionnée (70%)\|book__images_samples_1.jpg (Image JPEG, 1772 × 1299 pixels) - Redimensionnée (70%)]]
-> - [[Sources/Ce que j'ai lu/Economie data et cloud  la France se félicite de ladoption du Data Act\|Economie data et cloud  la France se félicite de ladoption du Data Act]]
-> - [[Sources/Ce que j'ai lu/How to choose the right note-taking app\|How to choose the right note-taking app]]
-> - [[Sources/Ce que j'ai lu/Le jardin numérique  une alternative aux réseaux sociaux  Viuz\|Le jardin numérique  une alternative aux réseaux sociaux  Viuz]]
-> - [[Sources/Ce que j'ai lu/Notes de visionnage  Le design narratif à lère de Twitch Stacey Mason Fiction-interactive.fr\|Notes de visionnage  Le design narratif à lère de Twitch Stacey Mason Fiction-interactive.fr]]
-> - [[Sources/Ce que j'ai lu/Planète Boucles dor — Wikipédia\|Planète Boucles dor — Wikipédia]]
-> - [[Sources/Ce que j'ai lu/Quest-ce que la méthode Inbox Zero pour gérer ses emails\|Quest-ce que la méthode Inbox Zero pour gérer ses emails]]
-> - [[Sources/Ce que j'ai lu/Ty-ar-Churé — Wikipédia\|Ty-ar-Churé — Wikipédia]]
-> - [[Sources/Ce que j'ai lu/Via negativa, ou lart de la soustraction\|Via negativa, ou lart de la soustraction]]
-> - [[Sources/Ce que j'ai lu/153\|153]]
-> - [[Sources/Ce que j'ai lu/Kianga I wish people would stop trying to be clever with country TLDs. - meow.social - Liens en vrac de sebsauvage\|Kianga I wish people would stop trying to be clever with country TLDs. - meow.social - Liens en vrac de sebsauvage]]
-> - [[Sources/Ce que j'ai lu/A post shared by Tiago Forte (@fortelabsco) (4)\|A post shared by Tiago Forte (@fortelabsco) (4)]]
-> - [[Projects/Ceux qui luttaient dans les ténèbres/Scénario/La Maison Hantée\|La Maison Hantée]]
-> - [[Sources/Ce que j'ai lu/GitLab - Comment bien gérer ses projets\|GitLab - Comment bien gérer ses projets]]
-> - [[Sources/Ce que j'ai écouté/Tech Café - Pizzas boostées à lIA - Podcast Addict\|Tech Café - Pizzas boostées à lIA - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Tech Café - Airchat  parlez. Point. - Podcast Addict\|Tech Café - Airchat  parlez. Point. - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P2.EP3_Le-lutin-amoureux - Podcast Addict\|Late Night Stories - S1.P2.EP3_Le-lutin-amoureux - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P1.EP3_Toxique - Podcast Addict\|Late Night Stories - S1.P1.EP3_Toxique - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Carbone 14, le magazine de larchéologie - Actualités d’avant le déluge - Podcast Addict\|Carbone 14, le magazine de larchéologie - Actualités d’avant le déluge - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Mauvais genres - Dragclown Affairs, une exposition qui fait fusionner l’univers des clowns et des drags - Podcast Addict\|Mauvais genres - Dragclown Affairs, une exposition qui fait fusionner l’univers des clowns et des drags - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Tech Café - Luxo Jr. - Podcast Addict\|Tech Café - Luxo Jr. - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P3.EP3_Entre-feu-et-glace - Podcast Addict\|Late Night Stories - S1.P3.EP3_Entre-feu-et-glace - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P3.EP2_Entre-feu-et-glace - Podcast Addict\|Late Night Stories - S1.P3.EP2_Entre-feu-et-glace - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P3.EP0_Entre-feu-et-glace_Présentation - Podcast Addict\|Late Night Stories - S1.P3.EP0_Entre-feu-et-glace_Présentation - Podcast Addict]]
-> - [[Sources/Ce que j'ai vu/Le Coeur A Ses Raisons S01E01\|Le Coeur A Ses Raisons S01E01]]
-> - [[Sources/Ce que j'ai vu/Gloutons et Dragons\|Gloutons et Dragons]]
-> - [[Sources/Ce que j'ai écouté/Tech Café - Lâge dor de la réparation (ou presque) - Podcast Addict\|Tech Café - Lâge dor de la réparation (ou presque) - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Lhistoire de Nintendo  des yakuzas aux jeux vidéo - Podcast Addict\|Arnaques, crimes et putaclic - Lhistoire de Nintendo  des yakuzas aux jeux vidéo - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Le rendez-vous de létrange - Episode 20  Laffaire Wilma Montesi (avec Kurt du podcast Obscurum) - Podcast Addict\|Le rendez-vous de létrange - Episode 20  Laffaire Wilma Montesi (avec Kurt du podcast Obscurum) - Podcast Addict]]
-> - [[Idées/La bienveillance toxique\|La bienveillance toxique]]
-> - [[Sources/Ce que j'ai lu/Newsletter daprès 10 ans\|Newsletter daprès 10 ans]]
-> - [[Sources/Ce à quoi j'ai joué/Terra Nil — Wikipédia\|Terra Nil — Wikipédia]]
-> - [[Sources/Ce que j'ai écouté/Investir Simple - 146 - 11 astuces pour payer moins dimpôts - Podcast Addict\|Investir Simple - 146 - 11 astuces pour payer moins dimpôts - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Tech Café - Radio Café - Podcast Addict\|Tech Café - Radio Café - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Lhistoire de Reddit épisode 2  la fin de lespoir dun internet libre et démocratique - Podcast Addict\|Arnaques, crimes et putaclic - Lhistoire de Reddit épisode 2  la fin de lespoir dun internet libre et démocratique - Podcast Addict]]
-> - [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Reddit  lhistoire mouvementée de linternet démocratique - Podcast Addict\|Arnaques, crimes et putaclic - Reddit  lhistoire mouvementée de linternet démocratique - Podcast Addict]]
-> 
-{ .block-language-dataview}
-
-# Podcast
-
 ## Introduction
 
 > [!check] Punchline
@@ -76,24 +14,14 @@
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-#### Films
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-#### Séries TV
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-#### YouTube
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                   | rating | review                                                                                                                                                                                                                                                                                                                            |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai vu/001 Game Creator Game Engine in 2024 - Is It Any Good [Currently on Humble]\|001 Game Creator Game Engine in 2024 - Is It Any Good [Currently on Humble]]] | 🟢     | Article intéressant autour de ce moteur de jeu. Au final je pense que pour le type de jeu que j'ai en tête ce moteur ne va pas convenir à ce que je veux et ce que j'ai déjà vu (comme Adventure Game Studio)                                                                                                                     |
+| [[Sources/Ce que j'ai vu/Gloutons et Dragons\|Gloutons et Dragons]]                                                                                                                 | 🟢     | Halalalala cette fin de saison ! Vivement la suite !                                                                                                                                                                                                                                                                              |
+| [[Sources/Ce que j'ai vu/Jigokuraku\|Jigokuraku]]                                                                                                                                   | 🟢     | Un animé assez sympa si on aime les animés de combat. Je trouve que l'histoire est intéressante et le contexte dans une ile étrange avec des dieux déformés et des religions tordues donne pas mal d'inspiration pour des jeux de rôle et jeux vidéos.                                                                            |
+| [[Sources/Ce que j'ai vu/Mulligan\|Mulligan]]                                                                                                                                       | 🟢     | Une série assez fun et marrante sur un scénario post apo après une attaque alien. C'est débile, très drôle et ça vide bien la tête.                                                                                                                                                                                               |
+| [[Sources/Ce que j'ai vu/Onmyôji Celui qui parle aux démons\|Onmyôji Celui qui parle aux démons]]                                                                                   | 🟢     | <ul><li>Pour l'instant une belle découverte plutôt poétique. Une histoire d'exorciste en asie médiévale.</li><li>Une série animé très calme et en plein dans le folklore asiatique, c'est très intéressant, la façon de voir les démons, la façon dont sont envisagés les exorcismes, et l'histoire est sympa à suivre.</li></ul> |
+| [[Sources/Ce que j'ai vu/Talend ESB Rest Api service Fundamentals\|Talend ESB Rest Api service Fundamentals]]                                                                       | 🟢     | Une révision sur l'utilisation des routes Camel dans Talend pour monter des endpoint en REST. Je vous ai perdu ? Bon, j'avais juste besoin de réviser pour me rappeler comment faire des web service à destination de l'extérieur.                                                                                                |
 
 { .block-language-dataview}
 
@@ -101,17 +29,13 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-#### Livres
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-#### Articles
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                       | rating | review                                                                                                                                                                                                                                                          |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 291\|Dense Discovery – Issue 291]]                                                                                                                                     | 🟢     | Pas grand chose cette semaine, car l'auteur est en vacances :)                                                                                                                                                                                                  |
+| [[Sources/Ce que j'ai lu/Dimension à évolution lente — Wikipédia\|Dimension à évolution lente — Wikipédia]]                                                                                                             | 🟢     | Révision autour de l'idée des dimensions à évolution lente sur une base de donnée.                                                                                                                                                                              |
+| [[Sources/Ce que j'ai lu/How to track progress and stay motivated in research\|How to track progress and stay motivated in research]]                                                                                   | 🟢     | Un sujet intéressant dans cette newsletter. Comment rester motivé, comment obtenir un sentiment d'accomplissement lorsque l'on avance sur un projet ou sur des tâches.                                                                                          |
+| [[Sources/Ce que j'ai lu/La mythologie celtique - Christian Léourier\|La mythologie celtique - Christian Léourier]]                                                                                                     | 🟢     | Un petit livre assez sympathique sur la mythologie Irlandaise et les différents peuples légendaire qui ont peuplé l'ile, leurs relations entre eux, les actes magiques et vengeance, plutôt intéressant.                                                        |
+| [[Sources/Ce que j'ai lu/Oracle Database  Comment retrouver la date et l’heure de modification d’une donnée - EASYTEAM\|Oracle Database  Comment retrouver la date et l’heure de modification d’une donnée - EASYTEAM]] | 🟢     | Il arrive qu'à la suite d'un incident applicatif, il soit nécessaire de retrouver toutes les lignes modifiées depuis un instant T. Ici nous avons plusieurs façon de le faire dans le SGBD Oracle. Soit par bloc, soit carrément à la ligne par dernier commit. |
 
 { .block-language-dataview}
 
@@ -119,18 +43,23 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-#### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                                                                                                                                                                                               | rating | review                                                                                                                                                                                                                                                                                            |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic\|Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic]]                                                                                                                                         | 🟢     | Histoire complètement hallucinante que je ne connaissais pas. L'enchainement d'évènement suite à cette dick pick est juste incroyable, on dirait un film.                                                                                                                                         |
+| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic  - Podcast Addict\|Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic  - Podcast Addict]]                                                                                                     | 🟢     | Histoire complètement hallucinante que je ne connaissais pas. L'enchainement d'évènement suite à cette dick pick est juste incroyable, on dirait un film.                                                                                                                                         |
+| [[Sources/Ce que j'ai écouté/Coup Critique - CONSEIL JDR  Le domaine public dans le jeu de rôle sur table - Partie 1 - Podcast Addict\|Coup Critique - CONSEIL JDR  Le domaine public dans le jeu de rôle sur table - Partie 1 - Podcast Addict]]                                                                                                                                               | 🟢     | Très bon sujet et très bon partage de ressource pour la création dans le jeu de rôle. Le domaine public regorge de bonnes choses à utiliser et découvrir.                                                                                                                                         |
+| [[Sources/Ce que j'ai écouté/Les Échos d'Arkham - Les mystères d'Arkham - On continue la visite\|Les Échos d'Arkham - Les mystères d'Arkham - On continue la visite]]                                                                                                                                                                                                                           | 🟢     | épisode très sympa ou l'on se balade de nouveau dans Arkham. Ça manque peu être un peu de fil rouge, d'un thème à la balade, mais c'est assez cool de suivre les déambulations dans les rues d'Arkham.                                                                                            |
+| [[Sources/Ce que j'ai écouté/Les Échos dArkham - Les mystères dArkham  On continue la visite - Podcast Addict\|Les Échos dArkham - Les mystères dArkham  On continue la visite - Podcast Addict]]                                                                                                                                                                                               | 🟢     | épisode très sympa ou l'on se balade de nouveau dans Arkham. Ça manque peu être un peu de fil rouge, d'un thème à la balade, mais c'est assez cool de suivre les déambulations dans les rues d'Arkham.                                                                                            |
+| [[Sources/Ce que j'ai écouté/POURQUOI BUFFY C EST GENIAL - PBCG HORS SÉRIE STORYTELLER EN PUBLIC - Podcast Addict\|POURQUOI BUFFY C EST GENIAL - PBCG HORS SÉRIE STORYTELLER EN PUBLIC - Podcast Addict]]                                                                                                                                                                                       | 🟢     | Ça faisait longtemps et c'est très cool de réécouter l'équipe de PBCG surtout lors d'un live en convention. En plus l'épisode choisi est vraiment très cool.                                                                                                                                      |
+| [[Sources/Ce que j'ai écouté/Tech Rōnins - L’art du coaching inter-culturel, avec Stéphanie Devel - Podcast Addict\|Tech Rōnins - L’art du coaching inter-culturel, avec Stéphanie Devel - Podcast Addict]]                                                                                                                                                                                     | 🟢     | Je m'étais dit que cet épisode n'allait pas me parler au début et au final ça me parle pas mal. Je suis souvent confronté au même genre de problème dans mon travail avec des cultures de travail différente suivant les nationalités des gens et j'ai trouvé certains conseils assez pertinents. |
+| [[Sources/Ce que j'ai écouté/Build Yourself - 14 micro-habitudes pour améliorer sa vie\|Build Yourself - 14 micro-habitudes pour améliorer sa vie]]                                                                                                                                                                                                                                             | 🟡     | \-                                                                                                                                                                                                                                                                                                |
+| [[Sources/Ce que j'ai écouté/Intelligence Artificielle - Data Driven 101 - Le podcast IA & Data 100% en français - La Data et l’IA au service du bien commun - Ronan Sy (responsable projet @ Data for Good)\|Intelligence Artificielle - Data Driven 101 - Le podcast IA & Data 100% en français - La Data et l’IA au service du bien commun - Ronan Sy (responsable projet @ Data for Good)]] | 🟡     | Sujet plutôt intéressant sur la façon dont foctnionne l'association Data for Good, ce qu'elle fait et le type d'association qu'elle accompagne. Ce genre de projet mérite un coup de projecteur.                                                                                                  |
 
 { .block-language-dataview}
 
 ## Segment 5 : Projets & Apps
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
-
-#### Sources
 
 | File                                                                                                                            | date       | status |
 | ------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
@@ -139,8 +68,6 @@
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
-
-#### Sources
 
 | File | rating | review |
 | ---- | ------ | ------ |
@@ -151,93 +78,9 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-#### Sources
-
 | File | rating | review |
 | ---- | ------ | ------ |
 
 { .block-language-dataview}
 
-## Segment 7 : Interaction Avec Les Auditeurs
 
-## Conclusion
-
-- Récapitulation des temps forts de l'épisode.
-- Invitation à s'abonner au podcast et à le noter.
-- Annonce du thème du prochain épisode (si pertinent).
-- Remerciements aux auditeurs pour leur fidélité.
-
-# Description De L'épisode
-
-```prompt
-- Create a catchy French post for Instagram on the new episode of the podcast "La semaine de Valkann" with this note
-```
-
-# Sommaire De L'épisode
-
----
-🍿 Cette semaine, j'ai vu :
-
-
-{ .block-language-dataview}
-
----
-📚 Cette semaine, j'ai lu :
-
-
-{ .block-language-dataview}
-
----
-🎧 Cette semaine, j'ai écouté :
-
-
-{ .block-language-dataview}
-
----
-💡 Cette semaine, j'ai travaillé sur :
-
-- Ceux qui luttaient dans les ténèbres
-
-{ .block-language-dataview}
-
----
-🖥 Cette semaine, j'ai testé:
-
-
-{ .block-language-dataview}
-
----
-🎮 Cette semaine, j'ai joué :
-
-
-{ .block-language-dataview}
-
-# Instagram
-
-```Texte d'image
-
-Logo du podcast la semaine de Valkann. 
-Plusieurs éléments de pop culture qui surgissent d'un livre. On y trouve des manettes de console, des comics, des dés, du pop-corn et des lunettes 3D a l'ancienne, des livres de jdr un vinyle et un casque.
-
-Le livre est tenu par une main.
-```
-
-> [!NOTE] Texte
-
-```prompt
-- Suggest a French title for the episode based on its content 
-```
-
-> [!NOTE] Titre
-
-## 🏁 Les 10 plus Vieilles Choses Que Je Dois Finir
-
-### Sources
-
-| File                                                                                                                                                                                                                                             | Type | week | updated |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---- | ------- |
-| [[Sources/Ce que j'ai lu/Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica\|Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica]] | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/Les Secrets de New York\|Les Secrets de New York]]                                                                                                                                                                   | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/La seconde vie de Marion du Faouët\|La seconde vie de Marion du Faouët]]                                                                                                                                             | \-   | \-   | \-      |
-
-{ .block-language-dataview}
