--- a/src/site/notes/Calendrier/Semaines/2024-26.md
+++ b/src/site/notes/Calendrier/Semaines/2024-26.md
@@ -5,35 +5,6 @@
 
 # Cette semaine
 
-> [!check] To do this week
-> 
->  | File                                                                                                                                                                                                                                               |
-> | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-> | [[Calendrier/Jours/2024/06-June/2024-06-24\|2024-06-24]]                                                                                                                                                                                        |
-> | [[Calendrier/Jours/2024/06-June/2024-06-25\|2024-06-25]]                                                                                                                                                                                        |
-> | [[Calendrier/Jours/2024/06-June/2024-06-26\|2024-06-26]]                                                                                                                                                                                        |
-> | [[Calendrier/Jours/2024/06-June/2024-06-27\|2024-06-27]]                                                                                                                                                                                        |
-> | [[Calendrier/Jours/2024/06-June/2024-06-28\|2024-06-28]]                                                                                                                                                                                        |
-> | [[Calendrier/Jours/2024/06-June/2024-06-29\|2024-06-29]]                                                                                                                                                                                        |
-> | [[Calendrier/Jours/2024/06-June/2024-06-30\|2024-06-30]]                                                                                                                                                                                        |
-> | [[Sources/Ce que j'ai écouté/Big Data Hebdo - Episode 198  IA Gen et Anssi - Podcast Addict\|Big Data Hebdo - Episode 198  IA Gen et Anssi - Podcast Addict]]                                                                                   |
-> | [[Sources/Ce que j'ai écouté/Build Yourself - Comment cultiver lAUTODISCIPLINE et transformer sa vie  mes secrets ! - Podcast Addict\|Build Yourself - Comment cultiver lAUTODISCIPLINE et transformer sa vie  mes secrets ! - Podcast Addict]] |
-> | [[Sources/Ce que j'ai écouté/CAPTURE MAG - MONSTER SQUAD  CARRIE - Podcast Addict\|CAPTURE MAG - MONSTER SQUAD  CARRIE - Podcast Addict]]                                                                                                       |
-> | [[Projects/Ceux qui luttaient dans les ténèbres/Ceux qui luttaient dans les ténèbres\|Ceux qui luttaient dans les ténèbres]]                                                                                                                    |
-> | [[Sources/Ce que j'ai écouté/Coup Critique - INSPIRATION JDR  Au fil de mes lectures 2 (2024) - Podcast Addict\|Coup Critique - INSPIRATION JDR  Au fil de mes lectures 2 (2024) - Podcast Addict]]                                             |
-> | [[Sources/Ce que j'ai vu/Demon Slayer  Kimetsu no Yaiba\|Demon Slayer  Kimetsu no Yaiba]]                                                                                                                                                       |
-> | [[Sources/Ce que j'ai lu/Dense Discovery – Issue 294\|Dense Discovery – Issue 294]]                                                                                                                                                             |
-> | [[Sources/Ce que j'ai lu/France Travail (ex Pôle emploi) épinglé par la Quadrature du Net pour son recours aux algorithmes\|France Travail (ex Pôle emploi) épinglé par la Quadrature du Net pour son recours aux algorithmes]]                 |
-> | [[Sources/Ce que j'ai vu/Furiosa Une saga Mad Max\|Furiosa Une saga Mad Max]]                                                                                                                                                                   |
-> | [[Sources/Ce que j'ai vu/How a Bulgarian Village Dances Evil Spirits Away  Kukeri  The New Yorker Documentary\|How a Bulgarian Village Dances Evil Spirits Away  Kukeri  The New Yorker Documentary]]                                           |
-> | [[Sources/Ce que j'ai vu/Iron Chef Mexique (Série télévisée 2022– ) ⭐ 6.6  Jeu télévisé, Télé-réalité\|Iron Chef Mexique (Série télévisée 2022– ) ⭐ 6.6  Jeu télévisé, Télé-réalité]]                                                           |
-> | [[Sources/Ce que j'ai lu/Research without the hassle 4 steps to remove friction from your research\|Research without the hassle 4 steps to remove friction from your research]]                                                                 |
-> | [[Sources/Ce que j'ai écouté/Tech Café - Vidéos, sons et avatars VRP - Podcast Addict\|Tech Café - Vidéos, sons et avatars VRP - Podcast Addict]]                                                                                               |
-> 
-{ .block-language-dataview}
-
-# Podcast
-
 ## Introduction
 
 > [!check] Punchline
@@ -43,24 +14,12 @@
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-#### Films
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-#### Séries TV
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-#### YouTube
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                     | rating | review                                                                                                                                                                      |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai vu/Demon Slayer  Kimetsu no Yaiba\|Demon Slayer  Kimetsu no Yaiba]]                                                                                                             | 🟢     | Saison très sympa, mais comme toujours un peu courte                                                                                                                        |
+| [[Sources/Ce que j'ai vu/How a Bulgarian Village Dances Evil Spirits Away  Kukeri  The New Yorker Documentary\|How a Bulgarian Village Dances Evil Spirits Away  Kukeri  The New Yorker Documentary]] | 🟢     | reportage sur une tradition assez impressionnante qui m'inspire pas mal d'idée pour du jdr                                                                                  |
+| [[Sources/Ce que j'ai vu/Furiosa Une saga Mad Max\|Furiosa Une saga Mad Max]]                                                                                                                         | 🟡     | Pas super fan, trop de violence et de gore pour moi.                                                                                                                        |
+| [[Sources/Ce que j'ai vu/Iron Chef Mexique (Série télévisée 2022– ) ⭐ 6.6  Jeu télévisé, Télé-réalité\|Iron Chef Mexique (Série télévisée 2022– ) ⭐ 6.6  Jeu télévisé, Télé-réalité]]                 | 🟡     | c'est fun à regarder, c'est un show avec en plus des gens qui surjoue, c'est très drôle. Ça donne des idées pour intégrer des concours de cuisine dans des scénarios de jdr |
 
 { .block-language-dataview}
 
@@ -68,17 +27,11 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-#### Livres
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-#### Articles
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                               | rating | review                                                                                                                            |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 294\|Dense Discovery – Issue 294]]                                                                                                                                             | 🟢     | Une réflexion sur le capitalisme, ces travers et comment essayer de les modifier.                                                 |
+| [[Sources/Ce que j'ai lu/France Travail (ex Pôle emploi) épinglé par la Quadrature du Net pour son recours aux algorithmes\|France Travail (ex Pôle emploi) épinglé par la Quadrature du Net pour son recours aux algorithmes]] | 🟢     | Une information plutôt inquiétante, je trouve sur l'utilisation d'IA et d'algorithme pour classer les chômeurs et les surveiller. |
+| [[Sources/Ce que j'ai lu/Research without the hassle 4 steps to remove friction from your research\|Research without the hassle 4 steps to remove friction from your research]]                                                 | \-     | \-                                                                                                                                |
 
 { .block-language-dataview}
 
@@ -86,18 +39,19 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-#### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                                               | rating | review                                                                                                                                                                    |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai écouté/Build Yourself - Comment cultiver lAUTODISCIPLINE et transformer sa vie  mes secrets ! - Podcast Addict\|Build Yourself - Comment cultiver lAUTODISCIPLINE et transformer sa vie  mes secrets ! - Podcast Addict]] | 🟢     | une réflexion sur l'autodiscipline ou plutôt en fait la force des habitudes, épisode pas mal                                                                              |
+| [[Sources/Ce que j'ai écouté/CAPTURE MAG - MONSTER SQUAD  CARRIE - Podcast Addict\|CAPTURE MAG - MONSTER SQUAD  CARRIE - Podcast Addict]]                                                                                                       | 🟢     | Super émission autour de Carrie, le sujet est vraiment exploré, je trouve et c'est captivant.                                                                             |
+| [[Sources/Ce que j'ai écouté/Coup Critique - INSPIRATION JDR  Au fil de mes lectures 2 (2024) - Podcast Addict\|Coup Critique - INSPIRATION JDR  Au fil de mes lectures 2 (2024) - Podcast Addict]]                                             | 🟢     | des inspirations lecture qui ont l'air très sympa                                                                                                                         |
+| [[Sources/Ce que j'ai écouté/Tech Café - Vidéos, sons et avatars VRP - Podcast Addict\|Tech Café - Vidéos, sons et avatars VRP - Podcast Addict]]                                                                                               | 🟢     | comme toujours un suivi de l'actu tech, avec les IA génératrices de vidéo des PC député et bien sûr les fameux bot twitter qui donnent des recettes de tarte aux fraises. |
+| [[Sources/Ce que j'ai écouté/Big Data Hebdo - Episode 198  IA Gen et Anssi - Podcast Addict\|Big Data Hebdo - Episode 198  IA Gen et Anssi - Podcast Addict]]                                                                                   | 🟡     | épisode avec pas mal de choses intéressante mais avec un rythme un peu étrange et comme c'était en différé moins d'échanges.                                              |
 
 { .block-language-dataview}
 
 ## Segment 5 : Projets & Apps
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
-
-#### Sources
 
 | File                                                                                                                            | date       | status |
 | ------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
@@ -106,8 +60,6 @@
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
-
-#### Sources
 
 | File | rating | review |
 | ---- | ------ | ------ |
@@ -118,69 +70,9 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-#### Sources
-
 | File | rating | review |
 | ---- | ------ | ------ |
 
 { .block-language-dataview}
 
-## Segment 7 : Interaction Avec Les Auditeurs
 
-## Conclusion
-
-- Récapitulation des temps forts de l'épisode.
-- Invitation à s'abonner au podcast et à le noter.
-- Annonce du thème du prochain épisode (si pertinent).
-- Remerciements aux auditeurs pour leur fidélité.
-
-# Sommaire De L'épisode
-
----
-🍿 Cette semaine, j'ai vu :
-
-
-{ .block-language-dataview}
-
----
-📚 Cette semaine, j'ai lu :
-
-
-{ .block-language-dataview}
-
----
-🎧 Cette semaine, j'ai écouté :
-
-
-{ .block-language-dataview}
-
----
-💡 Cette semaine, j'ai travaillé sur :
-
-- Ceux qui luttaient dans les ténèbres
-
-{ .block-language-dataview}
-
----
-🖥 Cette semaine, j'ai testé:
-
-
-{ .block-language-dataview}
-
----
-🎮 Cette semaine, j'ai joué :
-
-
-{ .block-language-dataview}
-
-## 🏁 Les 10 plus Vieilles Choses Que Je Dois Finir
-
-### Sources
-
-| File                                                                                                                                                                                                                                             | Type | week | updated |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---- | ------- |
-| [[Sources/Ce que j'ai lu/Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica\|Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica]] | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/Les Secrets de New York\|Les Secrets de New York]]                                                                                                                                                                   | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/La seconde vie de Marion du Faouët\|La seconde vie de Marion du Faouët]]                                                                                                                                             | \-   | \-   | \-      |
-
-{ .block-language-dataview}
