--- a/src/site/notes/Calendrier/Semaines/2024-21.md
+++ b/src/site/notes/Calendrier/Semaines/2024-21.md
@@ -5,193 +5,81 @@
 
 # 2024-21
 
-## Cette semaine
+# Cette semaine
 
-1. Email
-2. Evènements
-3. Notes
-4. Tasks
-
-> [!check] To do this week
-> 
-> ```tasks
-> due 2024-05-20 2024-05-26
-> group by due
-> short mode
-> show urgency
-> ```
-
-## Podcast
-
-### Introduction
+## Introduction
 
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
-### Segment 1 & 2 : Cinéma & Séries TV
+## Segment 1 & 2 : Cinéma & Séries TV
 
-#### 🍿 Cette Semaine, J'ai Vu
+### 🍿 Cette Semaine, J'ai Vu
 
-##### Films
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### Séries TV
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### YouTube
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                 | rating | review                                                                                                               |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai vu/Blood of Zeus (Série télévisée 2020– ) ⭐ 7.5  Animation, Action, Aventure\|Blood of Zeus (Série télévisée 2020– ) ⭐ 7.5  Animation, Action, Aventure]]                                   | 🟢     | Une deuxième saison plutôt sympathique qui se laisse regarder avec plaisir.                                          |
+| [[Sources/Ce que j'ai vu/Gloutons et Dragons\|Gloutons et Dragons]]                                                                                                                                               | 🟢     | Halalalala cette fin de saison ! Vivement la suite !                                                                 |
+| [[Sources/Ce que j'ai vu/How I Take Fleeting Notes for Obsidian (4 MIN)\|How I Take Fleeting Notes for Obsidian (4 MIN)]]                                                                                         | 🟢     | L'auteur du plugin Fleeting note nous explique ce qu'il fait avec et comment il l'utilise. Ça donne pas mal d'idées. |
+| [[Sources/Ce que j'ai vu/Jujutsu Kaisen 0 (2021) ⭐ 7.8  Animation, Action, Fantastique\|Jujutsu Kaisen 0 (2021) ⭐ 7.8  Animation, Action, Fantastique]]                                                           | 🟢     | Film d'animation très sympa autour de l'univers de Jujutsu Kaisen. J'ai vraiment bien aimé                           |
+| [[Sources/Ce que j'ai vu/Pizza de polenta, végé et sans gluten - Les recettes de François-Régis Gaudry\|Pizza de polenta, végé et sans gluten - Les recettes de François-Régis Gaudry]]                           | 🟢     | Une recette de pizza qui donne envie d'essayer, ça change un peu.                                                    |
+| [[Sources/Ce que j'ai vu/SpeedGamingFrancais - Twitch\|SpeedGamingFrancais - Twitch]]                                                                                                                             | 🟢     | En ce moment le tournoi francophone sur ALTTPR, moi franchement je scotche sur ce jeu.                               |
+| [[Sources/Ce que j'ai vu/Garôden La voie du loup solitaire (Série télévisée 2024– )  Animation, Action, Fantastique\|Garôden La voie du loup solitaire (Série télévisée 2024– )  Animation, Action, Fantastique]] | 🟡     | Une série pas mal mais pas non plus exceptionnelle et je trouve l'animation assez moyenne.                           |
+| [[Sources/Ce que j'ai vu/2024-05-23 - Tout savoir sur le dispositif démission pour reconversion\|2024-05-23 - Tout savoir sur le dispositif démission pour reconversion]]                                         | 🔴     | Encore un webinaire de l'Apec mais que j'ai trouvé plus que moyen. Expédié en 30 min puis ensuite question...        |
 
 { .block-language-dataview}
 
-### Segment 3 : Culture Littéraire & Articles
+## Segment 3 : Culture Littéraire & Articles
 
-#### 📚 Cette Semaine, J'ai Lu
+### 📚 Cette Semaine, J'ai Lu
 
-##### Livres
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-##### Articles
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                   | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+| -------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 277\|Dense Discovery – Issue 277]] | \-     | Une newsletter autour de la nourriture ultra-industrialisée que certains chercheurs comparent à une nouvelle industrie du tabac en termes de danger pour la santé. La mesure des calories est à la base du marketing de coca cola et l'on dépense autant de calorie à chasser sa nourriture qu'à gérer le stress de la vie moderne. Toujours se demander si ce qu'on fait vaut le coup, si cela vaut la peine qu'on y dépense de l'énergie. iCloud est rempli a 80% de photo de produit unique avec pour commentaire : C'est celui-là le bon ! |
 
 { .block-language-dataview}
 
-### Segment 4 : Podcasts Et Musiques
+## Segment 4 : Podcasts Et Musiques
 
-#### 🎧 Cette Semaine, J'ai Écouté
+### 🎧 Cette Semaine, J'ai Écouté
 
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
+| File                                                                                                                                                                                                                                                             | rating | review                                                                                                                                                             |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Tetris  lhistoire dun jeu vidéo digne dun roman despionnage 12 - Podcast Addict\|Arnaques, crimes et putaclic - Tetris  lhistoire dun jeu vidéo digne dun roman despionnage 12 - Podcast Addict]] | 🟢     | L'histoire incroyable du jeu de rôle Tetris sur fond de guerre froide.                                                                                             |
+| [[Sources/Ce que j'ai écouté/DataGen - 129 - BlaBlaCar  Scaler l’impact de léquipe Data Engineering - Podcast Addict\|DataGen - 129 - BlaBlaCar  Scaler l’impact de léquipe Data Engineering - Podcast Addict]]                                               | 🟢     | Réflexion intéressante et surtout un témoignage de la mise en place du data mesh.                                                                                  |
+| [[Sources/Ce que j'ai écouté/Decideo - Data Science, Big Data, Intelligence Augmentée - 4.16 Les mots-clefs du Data Mesh - Podcast Addict\|Decideo - Data Science, Big Data, Intelligence Augmentée - 4.16 Les mots-clefs du Data Mesh - Podcast Addict]]     | 🟢     | Les points important du concept de Data mesh expliqués simplement.                                                                                                 |
+| [[Sources/Ce que j'ai écouté/Tech Café - Les PC Copilot+ débarquent ! - Podcast Addict\|Tech Café - Les PC Copilot+ débarquent ! - Podcast Addict]]                                                                                                           | 🟢     | Le coup de microsoft avec Recall fait quand même peur en terme de confidentialité sur son pc.                                                                      |
+| [[Sources/Ce que j'ai écouté/Tech Rōnins - Introduction au monde des startups, avec Yoann Demont - Podcast Addict\|Tech Rōnins - Introduction au monde des startups, avec Yoann Demont - Podcast Addict]]                                                     | 🟢     | Des explications sur les startups et les différentes étapes par lesquelles elles passent, c'est assez intéressant de comprendre ce qui se cache derrière le terme. |
+| [[Sources/Ce que j'ai écouté/SCEPTICISME SCIENTIFIQUE - Épisode 559 Éléments d’histoire sur la genèse du Comité Para - Podcast Addict\|SCEPTICISME SCIENTIFIQUE - Épisode 559 Éléments d’histoire sur la genèse du Comité Para - Podcast Addict]]             | 🟡     | La création du comité PARA, un pan d'histoire du scepticisme, mais ça manque un peu de croustillant                                                                |
+| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Tetris  la guerre froide du jeu vidéo 22 - Podcast Addict\|Arnaques, crimes et putaclic - Tetris  la guerre froide du jeu vidéo 22 - Podcast Addict]]                                             | \-     | \-                                                                                                                                                                 |
+| [[Sources/Ce que j'ai écouté/Tech Café - GPT-4o vs Google Gemini - Podcast Addict\|Tech Café - GPT-4o vs Google Gemini - Podcast Addict]]                                                                                                                     | \-     | \-                                                                                                                                                                 |
 
 { .block-language-dataview}
 
-### Segment 5 : Projets & Apps
+## Segment 5 : Projets & Apps
 
-#### 💡 Cette Semaine, J'ai Travaillé Sur
-
-##### Sources
+### 💡 Cette Semaine, J'ai Travaillé Sur
 
 | File | date | status |
 | ---- | ---- | ------ |
 
 { .block-language-dataview}
 
-#### 🖥 Cette Semaine, J'ai testé
-
-##### Sources
+### 🖥 Cette Semaine, J'ai testé
 
 | File | rating | review |
 | ---- | ------ | ------ |
 
 { .block-language-dataview}
 
-### Segment 6 : Jeux
+## Segment 6 : Jeux
 
-#### 🎮 Cette Semaine, J'ai Joué
+### 🎮 Cette Semaine, J'ai Joué
 
-##### Sources
-
-| File | rating | review |
-| ---- | ------ | ------ |
-
-{ .block-language-dataview}
-
-### Segment 7 : Interaction Avec Les Auditeurs
-
-### Conclusion
-
-- Récapitulation des temps forts de l'épisode.
-- Invitation à s'abonner au podcast et à le noter.
-- Annonce du thème du prochain épisode (si pertinent).
-- Remerciements aux auditeurs pour leur fidélité.
-
-# Description De L'épisode
-
-```prompt
-- Create a catchy French post for Instagram on the new episode of the podcast "La semaine de Valkann" with this note
-```
-
-# Sommaire De L'épisode
-
----
-🍿 Cette semaine, j'ai vu :
-
+| File                                                                        | rating | review                                                                                                                   |
+| --------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------ |
+| [[Sources/Ce à quoi j'ai joué/Les Mondes Disparus\|Les Mondes Disparus]] | 🟢     | Une super exposition en réalité virtuelle, c'est un peu un des futurs possible des jeux vidéos. J'ai adoré l'expérience. |
 
 { .block-language-dataview}
 
----
-📚 Cette semaine, j'ai lu :
 
-
-{ .block-language-dataview}
-
----
-🎧 Cette semaine, j'ai écouté :
-
-
-{ .block-language-dataview}
-
----
-💡 Cette semaine, j'ai travaillé sur :
-
-
-{ .block-language-dataview}
-
----
-🖥 Cette semaine, j'ai testé:
-
-
-{ .block-language-dataview}
-
----
-🎮 Cette semaine, j'ai joué :
-
-
-{ .block-language-dataview}
-
-# Instagram
-
-```Texte d'image
-
-Logo du podcast la semaine de Valkann. 
-Plusieurs éléments de pop culture qui surgissent d'un livre. On y trouve des manettes de console, des comics, des dés, du pop-corn et des lunettes 3D a l'ancienne, des livres de jdr un vinyle et un casque.
-
-Le livre est tenu par une main.
-```
-
-> [!NOTE] Texte
-
-```prompt
-- Suggest a French title for the episode based on its content 
-```
-
-> [!NOTE] Titre
-
-## 🏁 Les 10 plus Vieilles Choses Que Je Dois Finir
-
-### Sources
-
-| File                                                                                                                                                                                                                                             | Type | week | updated |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---- | ------- |
-| [[Sources/Ce que j'ai lu/Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica\|Voyage dans le Finistère, ou État de ce département en 1794 et 1795. T. 1  [par Jacques Cambry]  Gallica]] | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/Les Secrets de New York\|Les Secrets de New York]]                                                                                                                                                                   | \-   | \-   | \-      |
-| [[Sources/Ce que j'ai lu/La seconde vie de Marion du Faouët\|La seconde vie de Marion du Faouët]]                                                                                                                                             | \-   | \-   | \-      |
-
-{ .block-language-dataview}
